--- a/RPGVXAcecn/intro/107_function.html
+++ b/RPGVXAcecn/intro/107_function.html
@@ -68,7 +68,7 @@
 <p>实际中参数省略括号 () 也能使用。</p>
 <h2><a name="default">默认参数</a></h2>
 <p>定义函数时就已指定且使用时可以省略的参数称为<strong>默认参数</strong>。
-默认参数是在形式参数后面加上符号 = 来指定的。事先设定好了默认参数，
+默认参数是在形式参数后面加上符号 = 来指定的。事先设置好了默认参数，
 在使用函数时未指定括号 () 内实际参数数值的情况下，形式参数就会自动代入默认参数数值。</p>
 <pre>def dice(n = 6)<br>  return rand(n) + 1<br>end<br><br>p dice              # 等同于 p dice(6)<br></pre>
 <p>上述示例中未指定参数，使用函数时会返回一个 1～6 的随机数字，
