--- a/RPGVXAcecn/intro/109_graphics.html
+++ b/RPGVXAcecn/intro/109_graphics.html
@@ -51,15 +51,15 @@ end
 精灵传输元<strong>位图</strong>本身内容的类。</p>
 <p>第一行，是新生成一个 Sprite 类的实例，并把那个实例代入变量 skeleton。Sprite.new 是上一章学习过的，生成实例的第二种方法。</p>
 <p>第二行，是读取 RGSS-RTP 中所含的图片文件 ("Graphics/Battlers/Skeleton") 并
-作为 Bitmap 类的一个新实例。而且，对 skeleton 对象的 bitmap 属性（后述）进行设定。
-也就是设定这个位图为精灵传输元的意思。</p>
+作为 Bitmap 类的一个新实例。而且，对 skeleton 对象的 bitmap 属性（后述）进行设置。
+也就是设置这个位图为精灵传输元的意思。</p>
 <p>指定 Bitmap.new 参数的路径名，分隔符是使用 / 而不是 \ 这点要特别注意。
 我们在字符串「句柄」这项中学习了 \ 在字符串中具有特殊的意义，
 而在这里使用 / 就避免了这种可能的错误。</p>
 <h2><a name="property">属性</a></h2>
 <p><a href="../rgss/gc_sprite.html">Sprite</a> 类中像 bitmap 那样的特性称为<strong>属性</strong>。
 实际上这并不是 Ruby 语言的概念，而是 RGSS 的独特用语。
-在游戏程序中使用赋值运算符在多个方面对其内容特性进行设定，
+在游戏程序中使用赋值运算符在多个方面对其内容特性进行设置，
 这些就称为属性。例如，更改表示精灵坐标的 x、y 属性数值就是这样。</p>
 <pre>
 Skeleton = Sprite.new
@@ -70,8 +70,8 @@ loop do
   Graphics.update
 end
 </pre>
-<p>上面第三行，是把指定精灵 X 坐标的属性 x 设定为值 272。
-同样的第四行，是把指定精灵 Y 坐标的属性 y 设定为值 208。
+<p>上面第三行，是把指定精灵 X 坐标的属性 x 设置为值 272。
+同样的第四行，是把指定精灵 Y 坐标的属性 y 设置为值 208。
 这样运行的话，精灵就会显示在画面中央位置附近。</p>
 <p>让我们进一步加工一下。</p>
 <pre>
@@ -86,12 +86,12 @@ loop do
   Graphics.update
 end
 </pre>
-<p>这样就变成完全显示在画面正中央了。这个 ox、oy 属性的设定，
+<p>这样就变成完全显示在画面正中央了。这个 ox、oy 属性的设置，
 更改了精灵的<strong>原点</strong>。这和 VA 的事件指
 令「显示图片」中选择「左上」、「中心」是一样的概念。
 默认状态下，原点在图片的左上。赋值运算符的右侧调用的 width、height 是
 <a href="../rgss/gc_bitmap.html">Bitmap</a> 类的方法，作用是分别取得图片的宽和高。
-这里使用了其值的 1/2，也就是把图片的中心点设定为原点。</p>
+这里使用了其值的 1/2，也就是把图片的中心点设置为原点。</p>
 
 <h2><a name="input">Input 模块</a></h2>
 <p>简单地说一说输入的事情吧。RGSS中为了获得玩家输入按键的信息，准备了
