--- a/RPGVXAcecn/intro/110_array.html
+++ b/RPGVXAcecn/intro/110_array.html
@@ -56,7 +56,7 @@
 <p>想知道数组中是否含有特定的值的话，就要使用到 include? 方法。</p>
 <pre>a = ["阿莱库斯","布莱恩","卡罗鲁"]<br><br>p a.include?("布莱恩")            # =&gt; true<br>p a.include?("迪吉")        # =&gt; false<br></pre>
 <p>第三行中使用 include? 方法，是确认数组中是否含有字符串 "布莱恩"。
-上例在第一行生成数组时设定有字符串 "布莱恩"，所以输出结果为 true（真）。
+上例在第一行生成数组时设有字符串 "布莱恩"，所以输出结果为 true（真）。
 同样第四行是确认数组中是否含有字符串 "迪吉"。
 然而这个字符串在数组中是不存在的，所以输出结果就为 false（伪）。</p>
 <h2><a name="loop">数组的循环</a></h2>
