--- a/RPGVXAcecn/intro/111_hash.html
+++ b/RPGVXAcecn/intro/111_hash.html
@@ -43,7 +43,7 @@
 <p>想知道哈希表中是否含有某个特定主键的情况下，就要使用 include? 方法。</p>
 <pre>a = {"阿莱库斯"=&gt;2000, "杰克"=&gt;2003}<br><br>p a.include?("阿莱库斯")    # =&gt; true<br>p a.include?("小白兔")      # =&gt; false<br></pre>
 <p>第三行中使用 include? 方法，是确认哈希表中是否含有主键 "阿莱库斯"。
-上例在第一行生成哈希表时主键设定有 "阿莱库斯"，所以输出结果为 true（真）。
+上例在第一行生成哈希表时主键设有 "阿莱库斯"，所以输出结果为 true（真）。
 同样第四行是确认哈希表中是否含有主键 "小白兔"。
 然而这个主键在哈希表中是不存在的，所以输出结果就为 false（伪）。</p>
 <h2><a name="loop">哈希表的循环</a></h2>
