--- a/RPGVXAcecn/rgss/appendix02.html
+++ b/RPGVXAcecn/rgss/appendix02.html
@@ -81,7 +81,7 @@ href="rgss/appendix02.html#L006331">精度</A>影响。</P>
 href="rgss/appendix02.html#L006324">卷标字符</A>添加的
 「(空格)」、「+」、「-」、「0b」、「0」、「0x」、「0X」的宽度。</P><PRE>p sprintf("%#05x", 10) # =&gt; "0x00a"
 </PRE>
-<P>宽度是指「需要的宽度」。若结果的数字字符串超过指定的宽度，则会无视宽度的设定。</P>
+<P>宽度是指「需要的宽度」。若结果的数字字符串超过指定的宽度，则会无视宽度的设置。</P>
 <P>若宽度设为「*」，则使用参数指定宽度值。</P><PRE>p sprintf("%10s", "foo")    # =&gt; "       foo"
 p sprintf("%*s", 10, "foo") # =&gt; "       foo"
 </PRE>
@@ -99,7 +99,7 @@ p sprintf("%10.5e", 10)  # =&gt; "1.00000e+01"
 p sprintf("%10.5g",  10)  # =&gt; "        10"
 p sprintf("%#10.5G", 10)  # =&gt; "    10.000"
 </PRE>
-<P>若与字符串的指定字符「s」、「p」同用，则以精度做长度，参数字符串超出长度的部分会被切除。若宽度与精度相同，则只会输出符合精度设定的部分。</P><PRE>p sprintf("%10.2s", "foo")  # =&gt; "        fo"
+<P>若与字符串的指定字符「s」、「p」同用，则以精度做长度，参数字符串超出长度的部分会被切除。若宽度与精度相同，则只会输出符合精度设置的部分。</P><PRE>p sprintf("%10.2s", "foo")  # =&gt; "        fo"
 
 p sprintf("%5.5s", "foo")     # =&gt; # =&gt; "  foo"
 p sprintf("%5.5s", "foobar")  # =&gt; # =&gt; "fooba"
