--- a/RPGVXAcecn/rgss/gc_bitmap.html
+++ b/RPGVXAcecn/rgss/gc_bitmap.html
@@ -85,7 +85,7 @@ type=text/css href="../style.css">
   <DT>set_pixel(<VAR>x</VAR>, <VAR>y</VAR>, <VAR>color</VAR>)
 
   <DD>
-  <P>设定指定像素点 (<VAR>x</VAR>, <VAR>y</VAR>) 的色彩（<A
+  <P>设置指定像素点 (<VAR>x</VAR>, <VAR>y</VAR>) 的色彩（<A
   href="rgss/gc_color.html">Color</A>
   )。</P>
   <DT>hue_change(<VAR>hue</VAR>)
