--- a/RPGVXAcecn/rgss/gc_color.html
+++ b/RPGVXAcecn/rgss/gc_color.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML lang=zh><HEAD><TITLE>Color</TITLE>
 <META content="text/html; charset=GBK" http-equiv=Content-Type>
-<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet 
+<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
@@ -12,35 +12,35 @@ type=text/css href="../style.css">
   <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>类方法</H2>
 <DL>
-  <DT>Color.new(<VAR>red</VAR>, <VAR>green</VAR>, 
-  <VAR>blue</VAR>[, <VAR>alpha</VAR>]) 
-  <DT>Color.new <SPAN class=rgss3>(RGSS3)</SPAN> 
+  <DT>Color.new(<VAR>red</VAR>, <VAR>green</VAR>,
+  <VAR>blue</VAR>[, <VAR>alpha</VAR>])
+  <DT>Color.new <SPAN class=rgss3>(RGSS3)</SPAN>
   <DD>
   <P>生成色彩对象。<VAR>alpha</VAR> 值省略时使用 255。</P>
-  <P>如果参数没有指定，则默认设定为(0, 0, 0, 0)。 <SPAN 
+  <P>如果参数没有指定，则默认设置为(0, 0, 0, 0)。 <SPAN
   class=rgss3>(RGSS3)</SPAN></P></DD></DL>
 <H2>方法</H2>
 <DL>
-  <DT>set(<VAR>red</VAR>, <VAR>green</VAR>, <VAR>blue</VAR>[, 
-  <VAR>alpha</VAR>]) 
-  <DT>set(<VAR>color</VAR>) <SPAN class=rgss3>(RGSS3)</SPAN> 
-  
+  <DT>set(<VAR>red</VAR>, <VAR>green</VAR>, <VAR>blue</VAR>[,
+  <VAR>alpha</VAR>])
+  <DT>set(<VAR>color</VAR>) <SPAN class=rgss3>(RGSS3)</SPAN>
+
   <DD>
   <P>一次设置所有属性。</P>
-  <P>第二种用法可以从参数指定的对象中复制所有色彩属性，而无需特别设定。 <SPAN 
+  <P>第二种用法可以从参数指定的对象中复制所有色彩属性，而无需特别设置。 <SPAN
   class=rgss3>(RGSS3)</SPAN></P></DD></DL>
 <H2>属性</H2>
 <DL>
-  <DT>red 
+  <DT>red
   <DD>
   <P>红色值（0～255）。超出范围的数值会自动修正。</P>
-  <DT>green 
+  <DT>green
   <DD>
   <P>绿色值（0～255）。超出范围的数值会自动修正。</P>
-  <DT>blue 
+  <DT>blue
   <DD>
   <P>蓝色值（0～255）。超出范围的数值会自动修正。</P>
-  <DT>alpha 
+  <DT>alpha
   <DD>
   <P>alpha （填充度）值（0～255）。超出范围的数值会自动修正。</P></DD></DL>
 <H6></H6></BODY></HTML>
