--- a/RPGVXAcecn/rgss/gc_rpg_system.html
+++ b/RPGVXAcecn/rgss/gc_rpg_system.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML lang=zh><HEAD><TITLE>RPG::System</TITLE>
 <META content="text/html; charset=GBK" http-equiv=Content-Type>
-<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet 
+<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
@@ -12,138 +12,138 @@ type=text/css href="../style.css">
   <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>属性</H2>
 <DL>
-  <DT>game_title 
+  <DT>game_title
   <DD>
   <P>标题文字。</P>
-  <DT>version_id 
+  <DT>version_id
   <DD>
   <P>检查更新用的随机数，RPG Maker VX每次存档都会变更此数值。</P>
-  <DT>japanese 
+  <DT>japanese
   <DD>
   <P>在日文版本中始终开启的开关。</P>
-  <DT>party_members 
+  <DT>party_members
   <DD>
   <P>初始队伍。角色 ID 编号的数组。</P>
-  <DT>currency_unit 
+  <DT>currency_unit
   <DD>
   <P>货币单位。</P>
-  <DT>window_tone 
+  <DT>window_tone
   <DD>
   <P>窗口颜色（<A href="gc_tone.html">Tone</A>&nbsp;）。</P>
-  <DT>elements 
+  <DT>elements
   <DD>
   <P>属性列表。以属性 ID 编号为索引的字符串数组，0 号元素为 nil。</P>
-  <DT>skill_types 
+  <DT>skill_types
   <DD>
   <P>技能类型列表。以技能类型 ID 编号为索引的字符串数组，0 号元素为 nil。</P>
-  <DT>weapon_types 
+  <DT>weapon_types
   <DD>
   <P>武器类型列表。以武器类型 ID 编号为索引的字符串数组，0 号元素为 nil。</P>
-  <DT>armor_types 
+  <DT>armor_types
   <DD>
   <P>防具类型列表。以防具类型 ID 编号为索引的字符串数组，0 号元素为 nil。</P>
-  <DT>switches 
+  <DT>switches
   <DD>
   <P>开关列表。以开关 ID 编号为索引的字符串数组，0 号元素为 nil。</P>
-  <DT>variables 
+  <DT>variables
   <DD>
   <P>变量列表。以变量 ID 编号为索引的字符串数组，0 号元素为 nil。</P>
-  <DT>boat 
+  <DT>boat
   <DD>
-  <P>小船设定（<A 
-  href="gc_rpg_system_vehicle.html">RPG::System::Vehicle</A>&nbsp;）。</P>
-  <DT>ship 
+  <P>小船设置（<A
+  href="gc_rpg_system_vehicle.html">RPG::System::Vehicle</A>）。</P>
+  <DT>ship
   <DD>
-  <P>大船设定（<A 
-  href="gc_rpg_system_vehicle.html">RPG::System::Vehicle</A>&nbsp;）。</P>
-  <DT>airship 
+  <P>大船设置（<A
+  href="gc_rpg_system_vehicle.html">RPG::System::Vehicle</A>）。</P>
+  <DT>airship
   <DD>
-  <P>飞艇（<A 
-href="gc_rpg_system_vehicle.html">RPG::System::Vehicle</A>&nbsp;）。</P>
-  <DT>title1_name 
+  <P>飞艇设置（<A
+href="gc_rpg_system_vehicle.html">RPG::System::Vehicle</A>）。</P>
+  <DT>title1_name
   <DD>
   <P>标题背景画面的文件名。</P>
-  <DT>title2_name 
+  <DT>title2_name
   <DD>
   <P>标题前端画面的文件名。</P>
-  <DT>opt_draw_title 
+  <DT>opt_draw_title
   <DD>
   <P>绘制标题文字的开关。</P>
-  <DT>opt_use_midi 
+  <DT>opt_use_midi
   <DD>
   <P>启动时初始化 MIDI 的开关。</P>
-  <DT>opt_transparent 
+  <DT>opt_transparent
   <DD>
   <P>初始时玩家行走图透明的开关。</P>
-  <DT>opt_followers 
+  <DT>opt_followers
   <DD>
   <P>队列行进（开火车）的开关。</P>
-  <DT>opt_slip_death 
+  <DT>opt_slip_death
   <DD>
   <P>慢性伤害可导致无法战斗的开关。</P>
-  <DT>opt_floor_death 
+  <DT>opt_floor_death
   <DD>
   <P>地形伤害可导致无法战斗的开关。</P>
-  <DT>opt_display_tp 
+  <DT>opt_display_tp
   <DD>
   <P>在战斗画面显示特技值的开关。</P>
-  <DT>opt_extra_exp 
+  <DT>opt_extra_exp
   <DD>
   <P>替补队员可获得经验值的开关。</P>
-  <DT>title_bgm 
+  <DT>title_bgm
   <DD>
-  <P>标题画面背景音乐（<A href="gc_rpg_bgm.html">RPG::BGM</A>&nbsp;）。</P>
-  <DT>battle_bgm 
+  <P>标题画面背景音乐（<A href="gc_rpg_bgm.html">RPG::BGM</A>）。</P>
+  <DT>battle_bgm
   <DD>
-  <P>战斗画面背景音乐（<A href="gc_rpg_bgm.html">RPG::BGM</A>&nbsp;）。</P>
-  <DT>battle_end_me 
+  <P>战斗画面背景音乐（<A href="gc_rpg_bgm.html">RPG::BGM</A>）。</P>
+  <DT>battle_end_me
   <DD>
-  <P>战斗结束音效（<A href="gc_rpg_me.html">RPG::ME</A>&nbsp;）</P>
-  <DT>gameover_me 
+  <P>战斗结束音效（<A href="gc_rpg_me.html">RPG::ME</A>）</P>
+  <DT>gameover_me
   <DD>
-  <P>游戏结束音效（<A href="gc_rpg_me.html">RPG::ME</A>&nbsp;）。</P>
-  <DT>sounds 
+  <P>游戏结束音效（<A href="gc_rpg_me.html">RPG::ME</A>）。</P>
+  <DT>sounds
   <DD>
-  <P>声效设定（<A href="gc_rpg_se.html">RPG::SE</A> 数组）。</P>
-  <DT>start_map_id 
+  <P>声效设置（<A href="gc_rpg_se.html">RPG::SE</A> 数组）。</P>
+  <DT>start_map_id
   <DD>
   <P>玩家初始位置的地图编号。</P>
-  <DT>start_x 
+  <DT>start_x
   <DD>
   <P>玩家初始位置的 X 坐标。</P>
-  <DT>start_y 
+  <DT>start_y
   <DD>
   <P>玩家初始位置的&nbsp;Y 坐标。</P>
-  <DT>terms 
+  <DT>terms
   <DD>
   <P>用语（<A href="gc_rpg_system_terms.html">RPG::System::Terms</A>）。</P>
-  <DT>test_battlers 
+  <DT>test_battlers
   <DD>
-  <P>战斗测试设置（<A 
+  <P>战斗测试设置（<A
   href="gc_rpg_system_testbattler.html">RPG::System::TestBattler</A>）。</P>
-  <DT>test_troop_id 
+  <DT>test_troop_id
   <DD>
   <P>战斗测试中的敌群编号。</P>
-  <DT>battleback1_name 
+  <DT>battleback1_name
   <DD>
   <P>战斗测试背景下半部文件名。</P>
-  <DT>battleback2_name 
+  <DT>battleback2_name
   <DD>
   <P>战斗测试背景上半部文件名。</P>
-  <DT>battler_name 
+  <DT>battler_name
   <DD>
   <P>编辑器内部使用，战斗图文件名。</P>
-  <DT>battler_hue 
+  <DT>battler_hue
   <DD>
   <P>编辑器内部使用，战斗图档色调调整值（0～360）。</P>
-  <DT>edit_map_id 
+  <DT>edit_map_id
   <DD>
   <P>编辑器内部使用，目前正在编辑的地图 ID 编号。</P></DD></DL>
 <H2>内部类</H2>
 <UL>
-  <LI><A href="gc_rpg_system_vehicle.html">RPG::System::Vehicle</A> 
-  <LI><A href="gc_rpg_system_terms.html">RPG::System::Terms</A> 
-  <LI><A href="gc_rpg_system_testbattler.html">RPG::System::TestBattler</A> 
+  <LI><A href="gc_rpg_system_vehicle.html">RPG::System::Vehicle</A>
+  <LI><A href="gc_rpg_system_terms.html">RPG::System::Terms</A>
+  <LI><A href="gc_rpg_system_testbattler.html">RPG::System::TestBattler</A>
 </LI></UL>
 <H2>定义</H2><PRE>class RPG::System
   def initialize
