--- a/RPGVXAcecn/rgss/gc_window.html
+++ b/RPGVXAcecn/rgss/gc_window.html
@@ -30,7 +30,7 @@ type=text/css href="../style.css">
   <DT>move(<VAR>x</VAR>, <VAR>y</VAR>, <VAR>width</VAR>, <VAR>height</VAR>)
   <SPAN class=rgss3>(RGSS3)</SPAN>
   <DD>
-  <P>重新设定窗口的位置与大小。</P>
+  <P>重新设置窗口的位置与大小。</P>
   <DT>open? <SPAN class=rgss3>(RGSS3)</SPAN>
   <DD>
   <P>如果窗口被成功打开（不透明度为255），则返回 true 。</P>
