--- a/RPGVXAcecn/rgss/rgss.html
+++ b/RPGVXAcecn/rgss/rgss.html
@@ -48,8 +48,8 @@ class=rgss3>(RGSS3)</SPAN></P>
 <H2>©╙й╪сно╥</H2><IMG class=float_r alt="game folder" src="img/folder.png">
 <P>р╩╟Ц╣дё╛╣╠дЦк╚╩ВGame.exeнд╪Ч╣дй╠╨Рё╛ЁлпР╬м╩Авт╤╞©╙й╪╪стьRGSS3ткпп©Бртж╖Ёжсно╥ЁлпР╣дткппё╛╤Ь╢Ф╢╒уБп╘нд╪Ч╣днд╪Ч╪пё╛м╗Ёё╬м╠╩Ёфн╙сно╥д©б╪║ё</P>
 <P>уЩтз╠Ю╪╜жп╣дсно╥©иртм╗╧Щтз╡к╣╔жпя║тЯсно╥пт╡Бйт╩РуътзйЩ╬щ©Б - ╣пх╨жпя║тЯу╫╤╥╡Бйт║ё хГ╧ШдЦя║тЯаксно╥пт╡Бйтё╛дгц╢╠Да© $TEST
-╣дж╣╫╚╩А╠╩тщй╠иХ╤╗н╙уФё╛╤ЬхГ╧ШдЦя║тЯаку╫╤╥╡Бйтё╛тРйг╠Да© $BTEST ╣дж╣╫╚╩А╠╩тщй╠иХ╤╗н╙уФ║ё</P>
-<P>сно╥фДкШ╣др╩п╘иХ╤╗тР╢Ф╢╒сз <A href="#game_ini">Game.ini</A> уБ╦ЖеДжцнд╪Ч╣╠жп║ё</P>
+╣дж╣╫╚╩А╠╩тщй╠иХжцн╙уФё╛╤ЬхГ╧ШдЦя║тЯаку╫╤╥╡Бйтё╛тРйг╠Да© $BTEST ╣дж╣╫╚╩А╠╩тщй╠иХжцн╙уФ║ё</P>
+<P>сно╥фДкШ╣др╩п╘иХжцтР╢Ф╢╒сз <A href="#game_ini">Game.ini</A> уБ╦ЖеДжцнд╪Ч╣╠жп║ё</P>
 <H2><A name=game_ini>Game.ini</A></H2>
 <P>Game.ini йгтз╧╓Ёл╫╗а╒ж╝ЁУ╬м╠╩вт╤╞╢╢╫╗╣дё╛╡╒гр©иртсихМ╪Ч╠╬иМ╫Ьпп╦Эпб╡ывВё╛╣╚йгкЭр╡©ирт╠╩╪гйб╠╬рт╪╟фДкШндвж╠Ю╪╜хМ╪Ч╠Ю╪╜║ё</P>
 <P>╥╤юЩё╨</P><PRE>[Game]
@@ -90,7 +90,7 @@ href="gm_audio.html#se_play">Audio.se_play</A>, <A
 href="gm_graphics.html#transition">Graphics.transition</A></P>
 <H3>╟╡в╟йЩ╬щ</H3>
 <P>RPG Maker VX
-Ace&nbsp;жпн╗р╩╠Йв╪╣дRTP╪╞╬мйг"RPGVXAce"ё╛╣╚йгожтздЦря╬╜©иртвтпп╢╢╫╗╤юа╒╣дRTP╪╞ак║ёхГ╧ШдЦж╙╣юхГ╨нжфвВ╟╡в╟╟Эё╛
+Ace жпн╗р╩╠Йв╪╣дRTP╪╞╬мйг"RPGVXAce"ё╛╣╚йгожтздЦря╬╜©иртвтпп╢╢╫╗╤юа╒╣дRTP╪╞ак║ёхГ╧ШдЦж╙╣юхГ╨нжфвВ╟╡в╟╟Эё╛
 дгц╢дЦ╬м©иртвЯя╜ртоб╧ФтРю╢╤╗жф╤юль╣дRTP╪╞║ё</P>
 <P>р╩╟Цю╢к╣ё╛RTP╩А╠╩╟╡в╟╫ЬуБ╦Жд©б╪ё╨ </P><PRE>[CommonFilesFolder]\Enterbrain\RGSS3\[RTPName]
 </PRE>уБюО╣д [CommonFilesFolder] фДй╣╬мйг╡ывВо╣мЁжп╣д Common Files нд╪Ч╪пё╛╤Ь
@@ -121,9 +121,9 @@ Ace&nbsp;жпн╗р╩╠Йв╪╣дRTP╪╞╬мйг"RPGVXAce"ё╛╣╚йгожтздЦря╬╜©иртвтпп╢╢╫╗╤юа╒╣дRTP╪╞а
 <H3><A name=property>йТпт</A></H3>
 <P>"йТпт"йгр╩╦Ж <A href="g_index.html">сно╥©Б</A> жп╣д╦едНё╛кЭ╡╒╥г Ruby юОЁЖож╣д╦едНё╛╤Ьйгр╩жж RGSS
 жп╤юсп╣д╦едН║ё</P>
-<P>╠ххГё╛юШсцобцФ╣д╢ЗбК©ирт╩Ях║╨миХ╤╗р╩╦Ж╬╚аИ╣двЬ╠Й(<A href="gc_sprite.html#x">Sprite#x</A>)ё╨</P><PRE>x = sprite1.x            # ╩Ях║
-sprite2.x = x + 32    # иХ╤╗</PRE>
-<P>н╙ак╥╫╠ЦфП╪Шё╛уБ╠╩╤╗рЕн╙©им╗╧Щ╦Ёж╣тккЦ╥Ш╫Ьпп╩Ях║ё╗╤аЁЖё╘╨миХ╤╗ё╗п╢хКё╘╣д╥╫╥╗ё╛╬мЁфн╙"йТпт"║ё</P>
+<P>╠ххГё╛юШсцобцФ╣д╢ЗбК©ирт╩Ях║╨миХжцр╩╦Ж╬╚аИ╣двЬ╠Й(<A href="gc_sprite.html#x">Sprite#x</A>)ё╨</P><PRE>x = sprite1.x            # ╩Ях║
+sprite2.x = x + 32    # иХжц</PRE>
+<P>н╙ак╥╫╠ЦфП╪Шё╛уБ╠╩╤╗рЕн╙©им╗╧Щ╦Ёж╣тккЦ╥Ш╫Ьпп╩Ях║ё╗╤аЁЖё╘╨миХжцё╗п╢хКё╘╣д╥╫╥╗ё╛╬мЁфн╙"йТпт"║ё</P>
 <P>╣╚йгхГм╛ <A href="gc_color.html">Color</A> юЮ║╒ <A href="gc_tone.html">Tone</A> юЮ║╒<A href="gc_rect.html">Rect</A> юЮ
 ╣д╤тоСё╛кЫ╥╣╩ь╣дйг╤тоС╣дрЩсцё╛╤Ь╥г╤тоС╣д╦╠╠╬║ёрР╢к©иртсцобцФ╣д╦Яй╫пч╦двжлЕяуи╚ё╨</P><PRE>color = font1.color
 color.set(255, 0, 0)</PRE>
