--- a/RPGVXAcecn/rgss/s_functions.html
+++ b/RPGVXAcecn/rgss/s_functions.html
@@ -13,7 +13,7 @@ href="sm_kernel.html">Kernel</A>
   <DT>block_given?
   <DD>
   <P>若某方法带区块则返回 true ；否则返回 false。可参看 <A
-  href="syntax06.html#L000323">迭代器</A>&nbsp;以获得更多的信息。</P>
+  href="syntax06.html#L000323">迭代器</A> 以获得更多的信息。</P>
   <DT><A name=L000355>catch(<VAR>tag</VAR>) {|<VAR>tag</VAR>| .... }</A>
   <DD>
   <P>执行区块并返回其计算值。区块执行时若遇到与 tag 同名的 <A href="#L000413">throw</A> ，则返回该 throw
@@ -128,7 +128,7 @@ puts "foo"
   <P>详情请参阅 <A href="appendix02.html">sprintf 格式</A>。</P>
   <DT><A name=L000404>srand([<VAR>seed</VAR>])</A>
   <DD>
-  <P>设定 <A href="#L000393">rand</A> 方法的产生随机数的种子，返回旧的初始值。省略了 seed
+  <P>设置 <A href="#L000393">rand</A> 方法的产生随机数的种子，返回旧的初始值。省略了 seed
   ，则使用当前时间做为种子。</P>
   <DT><A name=L000413>throw(<VAR>tag</VAR>[, <VAR>value</VAR>])</A>
   <DD>
