--- a/RPGVXAcecn/rgss/sm_enumerable.html
+++ b/RPGVXAcecn/rgss/sm_enumerable.html
@@ -44,7 +44,7 @@ p [1,2,3].any? {|v| v &gt; 1}   # =&gt; true
   <P>再执行区块之前，将 init 的初始值和一个 item 确定为参数。在第二次和随后的循环中，将上一次区块的运算结果和下一个 item
   作为参数，随后继续执行区块。最后一个 item 也作为参数后，返回最后一次区块运算得出的结果。</P>
   <P>如果一个 item 是空的，那么就返回 init&nbsp;。</P>
-  <P>如果没有设定参数 <VAR>init</VAR>&nbsp;的初始值，则将第一、第二个 item 传递给区块。假如只有一个 item
+  <P>如果没有设置参数 <VAR>init</VAR>&nbsp;的初始值，则将第一、第二个 item 传递给区块。假如只有一个 item
   被定义的话，那么区块不会被执行，第一个 item 会被返回。如果没有 item&nbsp;被定义，那么就会返回 nil 。</P>
   <DL>
     <DT>范例
