--- a/RPGVXAcecn/rgss/syntax03.html
+++ b/RPGVXAcecn/rgss/syntax03.html
@@ -61,31 +61,31 @@ type=text/css href="../style.css">
   <P>tab ¶¨Î»±êÇ© (0x09)</P>
   <DT>\n
   <DD>
-  <P>newline »»ÐÐ&nbsp;(0x0a)</P>
+  <P>newline »»ÐÐ (0x0a)</P>
   <DT>\r
   <DD>
-  <P>carriage return ¹éÎ»&nbsp;(0x0d)</P>
+  <P>carriage return ¹éÎ» (0x0d)</P>
   <DT>\f
   <DD>
-  <P>form feed »»Ò³&nbsp;(0x0c)</P>
+  <P>form feed »»Ò³ (0x0c)</P>
   <DT>\b
   <DD>
-  <P>backspace ÍË¸ñ&nbsp;(0x08)</P>
+  <P>backspace ÍË¸ñ (0x08)</P>
   <DT>\a
   <DD>
-  <P>bell ÃùÉù&nbsp;(0x07)</P>
+  <P>bell ÃùÉù (0x07)</P>
   <DT>\e
   <DD>
-  <P>escape ÒÝ³ö&nbsp;(0x1b)</P>
+  <P>escape ÒÝ³ö (0x1b)</P>
   <DT>\s
   <DD>
-  <P>space ¿Õ¸ñ&nbsp;(0x20)</P>
+  <P>space ¿Õ¸ñ (0x20)</P>
   <DT>\nnn
   <DD>
   <P>°Ë½øÖÆ´úÂë nnn (n = 0-7)</P>
   <DT>\xnn
   <DD>
-  <P>Ê®Áù½øÖÆ´úÂë&nbsp;nn (n = 0-9, a-f)</P></DD></DL>
+  <P>Ê®Áù½øÖÆ´úÂë nn (n = 0-9, a-f)</P></DD></DL>
 <H3><A name=L000271>ÄÚÇ¶±í´ïÊ½</A></H3>
 <P>ÔÚÓÉË«ÒýºÅ°üÎ§µÄ×Ö·û´®ÒÔ¼°ÕýÔò±í´ïÊ½ÖÐ¿ÉÒÔÊ¹ÓÃ¡¸#{±í´ïÊ½}¡¹" £¬¿ÉÒÔ½«±í´ïÊ½µÄÄÚÈÝÒÔ×Ö·û´®µÄÐÎÊ½Ç¶ÈëÆäÖÐ¡£Èô¸Ã±í´ïÊ½ÊÇ´øÓÐ $ »ò @
 ¼ÇºÅµÄ±äÁ¿Ãû³Æ£¬Ôò¿ÉÒÔÊ¡È¥´óÀ¨ºÅ { }£¬Ò²¾ÍÊÇ¡¸#±äÁ¿Ãû³Æ¡¹µÄ¸ñÊ½¡£¾®ºÅ(#)µÄºóÃæÈô²»ÊÇ
@@ -98,7 +98,7 @@ p 'my name is #{$ruby}'     # =&gt; "my name is #{$ruby}"</PRE>
 /my name is #{myname}/</PRE>
 <P>ÔÚÁ½ÌõÐ±Ïß (/) Ö®ÖÐµÄ×Ö·û´®³ÆÎªÕýÔò±í´ïÊ½×ÖÃæÖµ£¬ÊÇ <A href="sc_regexp.html">Regexp</A> ÀàµÄÊµÀý¡£</P>
 <P>ÔÚ±í´ïÊ½ÖÐÊ¹ÓÃµÄ×ª±ä·û£¬Çë²Î¿´ <A href="appendix01.html">ÕýÔò±í´ïÊ½</A> ¡£</P>
-<P>ÔÚ×îºóµÄÐ±ÏßºóÃæ¼ÓÉÏÒÔÏÂ×ÖÄ¸¿ÉÒÔÉè¶¨¸ÃÕýÔò±í´ïÊ½×ÖÃæÖµµÄÑ¡Ïî£º</P>
+<P>ÔÚ×îºóµÄÐ±ÏßºóÃæ¼ÓÉÏÒÔÏÂ×ÖÄ¸¿ÉÒÔÉèÖÃ¸ÃÕýÔò±í´ïÊ½×ÖÃæÖµµÄÑ¡Ïî£º</P>
 <DL>
   <DT>i
   <DD>
@@ -107,20 +107,19 @@ p 'my name is #{$ruby}'     # =&gt; "my name is #{$ruby}"</PRE>
   <DD>
   <P>¶àÐÐÄ£Ê½¡£Ê¹¡¸.¡¹Ò²ÄÜÆ¥Åä»»ÐÐ¡£</P></DD></DL>
 <P>Ruby ÕýÔò±í´ïÊ½ÄÜÕýÈ·Æ¥Åä¶à×Ö½Ú×Ö·û£¨±ÈÈçººÓï¡¢ÈÕÓïµÈ£©¡£</P>
-<P>Óë×Ö·û´®Ò»Ñù£¬<A href="#L000255">¿ØÖÆ·û</A>&nbsp;ºÍ <A href="#L000271">ÄÚÇ¶±í´ïÊ½</A>
-Ò²ÄÜÔÚÕýÔò±í´ïÊ½ÖÐÊ¹ÓÃ¡£</P>
-<P>ÈôÕýÔò±í´ïÊ½ÖÐ²»°üº¬ <A href="#L000271">ÄÚÇ¶±í´ïÊ½</A>&nbsp;µÄ»° £¬Ã¿´Î¼ÆËãÖ®ºó¶¼»á·µ»ØÍ¬Ò»¸öÕýÔò±í´ïÊ½¶ÔÏó¡£Èô°üº¬ <A
+<P>Óë×Ö·û´®Ò»Ñù£¬<A href="#L000255">¿ØÖÆ·û</A>ºÍ<A href="#L000271">ÄÚÇ¶±í´ïÊ½</A>Ò²ÄÜÔÚÕýÔò±í´ïÊ½ÖÐÊ¹ÓÃ¡£</P>
+<P>ÈôÕýÔò±í´ïÊ½ÖÐ²»°üº¬ <A href="#L000271">ÄÚÇ¶±í´ïÊ½</A> µÄ»° £¬Ã¿´Î¼ÆËãÖ®ºó¶¼»á·µ»ØÍ¬Ò»¸öÕýÔò±í´ïÊ½¶ÔÏó¡£Èô°üº¬ <A
 href="#L000271">ÄÚÇ¶±í´ïÊ½</A> £¬ÔòÃ¿´Î¼ÆËã¶¼»á£¨ÒÀÕÕËùº¬ÓÐµÄÄÚÇ¶±í´ïÊ½£©·µ»ØÒ»¸öÐÂÉú³ÉµÄÕýÔò±í´ïÊ½¶ÔÏó¡£</P>
 <H2><A name=L000279>Êý×é±í´ïÊ½</A></H2>
 <P>ÊµÀý£º</P><PRE>[1, 2, 3]</PRE>
 <P>Óï·¨£º</P><PRE>'[' ±í´ïÊ½ ',' ... ']'</PRE>
-<P>¼ÆËãÃ¿Ò»¸ö±í´ïÊ½£¬²¢·µ»Ø°üº¬ËùµÃÖµµÄÊý×é£¬Êý×éÊÇ <A href="sc_array.html">Array</A>&nbsp;ÀàµÄÊµÀý¡£</P>
+<P>¼ÆËãÃ¿Ò»¸ö±í´ïÊ½£¬²¢·µ»Ø°üº¬ËùµÃÖµµÄÊý×é£¬Êý×éÊÇ <A href="sc_array.html">Array</A> ÀàµÄÊµÀý¡£</P>
 <P>Êý×é±í´ïÊ½Ã¿´Î¼ÆËã¶¼»á·µ»ØÐÂµÄÊý×é¶ÔÏó¡£</P>
 <H2><A name=L000280>¹þÏ£±í±í´ïÊ½</A></H2>
 <P>ÊµÀý£º</P><PRE>{1=&gt;2, 2=&gt;4, 3=&gt;6}</PRE>
 <P>Óï·¨£º</P><PRE>'{' ±í´ïÊ½ '=&gt;' ±í´ïÊ½ ',' ... '}'
 '{' ±í´ïÊ½ ',' ±í´ïÊ½ ',' ... '}'</PRE>
-<P>·µ»Ø½«Ã¿¸ö×îÖÕÖµ¶ÔÓ¦ÆäÖ÷¼üµÄ¹þÏ£±í¶ÔÏó¡£¹þÏ£±íÊÇ <A href="sc_hash.html">Hash</A>&nbsp;ÀàµÄÊµÀý¡£</P>
+<P>·µ»Ø½«Ã¿¸ö×îÖÕÖµ¶ÔÓ¦ÆäÖ÷¼üµÄ¹þÏ£±í¶ÔÏó¡£¹þÏ£±íÊÇ <A href="sc_hash.html">Hash</A> ÀàµÄÊµÀý¡£</P>
 <P>¹þÏ£±í£¬ÓÖ³ÆÎª¹ØÁªÊý×é£¬¿ÉÒÔ½«ÈÎÒ»ÀàÐÍµÄ¶ÔÏóÓëÁí£¨ÈÎ£©Ò»ÀàÐÍ¶ÔÏó½øÐÐ¹ØÁ¬¡£</P>
 <P>¹þÏ£±í±í´ïÊ½Ã¿´Î¼ÆËãºó·µ»ØÒ»¸öÐÂµÄ¹þÏ£±í¶ÔÏó¡£</P>
 <H2><A name=L000281>·¶Î§±í´ïÊ½</A></H2>
@@ -128,7 +127,7 @@ href="#L000271">ÄÚÇ¶±í´ïÊ½</A> £¬ÔòÃ¿´Î¼ÆËã¶¼»á£¨ÒÀÕÕËùº¬ÓÐµÄÄÚÇ¶±í´ïÊ½£©·µ»ØÒ»¸
 <P>Syntax:</P><PRE>±í´ïÊ½1 '..' ±í´ïÊ½2
 ±í´ïÊ½1 '...' ±í´ïÊ½2</PRE>
 <P>ÔÚ·ÇÌõ¼þ±í´ïÊ½µÄÇé¿öÏÂ£¬Ôò·µ»ØÓÉ±í´ïÊ½1ÖÁ±í´ïÊ½2µÄ·¶Î§¶ÔÏó¡£·¶Î§¶ÔÏóÊÇ <A
-href="sc_range.html">Range</A>&nbsp;ÀàµÄÊµÀý¡£</P>
+href="sc_range.html">Range</A> ÀàµÄÊµÀý¡£</P>
 <P>Ê¹ÓÃ .. ÔËËã·ûÉú³ÉµÄ·¶Î§¶ÔÏóÔò°üº¬×îºóµÄ±í´ïÊ½£¬¶øÊ¹ÓÃ ... µÄÔò²»°üÀ¨¡£</P>
 <P>ÈôÊÇ±í´ïÊ½µÄÁ½¶Ë½ÔÊÇÊý×Ö×ÖÃæÖµ£¬ÔòÃ¿´Î¼ÆËã¶¼·µ»ØÍ¬Ò»¸ö·¶Î§¶ÔÏó£»·ñÔòÃ¿´Î¼ÆËã¶¼·µ»ØÒ»¸öÐÂµÄ·¶Î§¶ÔÏó¡£</P>
 <H2><A name=L000282>·ûºÅ</A></H2>
