--- a/RPGVXAcecn/rpgvxace/0100_outline.html
+++ b/RPGVXAcecn/rpgvxace/0100_outline.html
@@ -16,7 +16,7 @@
 <dl>
 <dt>更合理的数据库</dt>
 <dd>
-<p>本作大幅度更改了数据库的构造。数据库的各项目添加了[特征]和[使用效果]的列表，相比以前单独的数据设置，现在的设定项目得以更加自由地组合。此外，本作还添加了反击和魔法反射等新功能，丰富了战斗的多样性。</p>
+<p>本作大幅度更改了数据库的构造。数据库的各项目添加了[特征]和[使用效果]的列表，相比以前单独的数据设置，现在的设置项目得以更加自由地组合。此外，本作还添加了反击和魔法反射等新功能，丰富了战斗的多样性。</p>
 </dd>
 <dt>纸娃娃系统</dt>
 <dd>
