--- a/RPGVXAcecn/rpgvxace/1110_intro_start.html
+++ b/RPGVXAcecn/rpgvxace/1110_intro_start.html
@@ -25,7 +25,7 @@
 <dt>● (2) 输入保存位置和标题</dt>
 
 <dd><p>输入工程的名字（推荐半角英文字母、数字），并在[游戏标题]中输入游戏的名称。[位置]里会显示工程保存的位置，可以点击右端的[…]按钮来更改。</p>
-<p>设定完成，点击[OK]按钮后，就制成了一个设定好最少数据的工程。这时就可以制作游戏了。
+<p>设置完成，点击[OK]按钮后，就制成了一个设置好最少数据的工程。这时就可以制作游戏了。
 </p></dd>
 </dl>
 <img src="img/1110_01.png" alt="新建工程" class="float_l">
@@ -49,8 +49,8 @@
 <h2>继续制作的方法</h2>
 
 <img src="img/1110_03.png" alt="构成游戏的要素" class="float_r">
-<p>本软件制作出的RPG游戏基于以下各类要素：游戏画面、玩家操作的角色、道具魔法的设定、故事与结构等。</p>
-<p>本软件的构造，是将这些要素以制作舞台的“地图”，表现事情的“事件”，决定角色设定的“数据库”这三种数据为中心。</p>
+<p>本软件制作出的RPG游戏基于以下各类要素：游戏画面、玩家操作的角色、道具魔法的设置、故事与结构等。</p>
+<p>本软件的构造，是将这些要素以制作舞台的“地图”，表现事情的“事件”，决定角色设置的“数据库”这三种数据为中心。</p>
 <p>制作游戏并没有规定的顺序。制作你的第一款游戏，建议先从制作地图开始。接着再根据游戏的内容，添加事件和角色等数据。</p>
 
 <h6></h6>
