--- a/RPGVXAcecn/rpgvxace/1120_intro_basicoperation.html
+++ b/RPGVXAcecn/rpgvxace/1120_intro_basicoperation.html
@@ -35,35 +35,35 @@
 <dd><p>显示选择中的功能的内容以及地图名、地图坐标。</p></dd>
 </dl>
 
-<h2>设定项目的编辑方法</h2>
+<h2>设置项目的编辑方法</h2>
 
-<p>使用本软件制作游戏，作业的中心是将各种窗口中准备的设定项目，依照自己的想法指定文字和项目。设定项目的种类和编辑方法有如下几种。</p>
+<p>使用本软件制作游戏，作业的中心是将各种窗口中准备的设置项目，依照自己的想法指定文字和项目。设置项目的种类和编辑方法有如下几种。</p>
 
 <dl>
 <dt>● 文字输入</dt>
-<dd><p>点击设定栏，会出现“|”的光标。在这个状态下，就可以用键盘输入文字了。输入的文字会插入在光标的位置。光标也可以通过键盘的方向键来移动。输入文字的方法会根据你的输入法不同而不同。</p></dd>
+<dd><p>点击设置栏，会出现“|”的光标。在这个状态下，就可以用键盘输入文字了。输入的文字会插入在光标的位置。光标也可以通过键盘的方向键来移动。输入文字的方法会根据你的输入法不同而不同。</p></dd>
 
 <dt>● 数值输入</dt>
-<dd><p>和文字输入一样，点击设定栏会出现“|”的光标。在这个状态下，可以用键盘输入半角数值。点击设定栏右端的[∧][∨]按钮也可以增减数值。</p></dd>
+<dd><p>和文字输入一样，点击设置栏会出现“|”的光标。在这个状态下，可以用键盘输入半角数值。点击设置栏右端的[∧][∨]按钮也可以增减数值。</p></dd>
 
 <dt>● 单选框</dt>
 <dd><p>从多个项目中指定一个。点击[○]后，在圆圈中显示小黑点的项目生效。</p></dd>
 
 <dt>● 复选框</dt>
-<dd><p>可以指定对应项目的设定是否有效。点击[□]后，在方块中打上勾的项目生效，再次点击即可消除。</p></dd>
+<dd><p>可以指定对应项目的设置是否有效。点击[□]后，在方块中打上勾的项目生效，再次点击即可消除。</p></dd>
 
 <dt>● 下拉列表</dt>
-<dd><p>指定列表中的一个项目来应用。列表可以点击设定栏右侧的[∨]来展开。</p>
+<dd><p>指定列表中的一个项目来应用。列表可以点击设置栏右侧的[∨]来展开。</p>
 </dd>
 
 <dt>● 列表框</dt>
-<dd><p>一览多个设定。双击项目时会打开一个窗口，执行内容的添加和更改。</p></dd>
+<dd><p>一览多个设置。双击项目时会打开一个窗口，执行内容的添加和更改。</p></dd>
 
 <dt>●[…]按钮</dt>
-<dd><p>设定栏右侧有[…]的项目，表示该项目的内容需要在其他窗口指定。点击[…]，在打开的窗口中进行设定。</p></dd>
+<dd><p>设置栏右侧有[…]的项目，表示该项目的内容需要在其他窗口指定。点击[…]，在打开的窗口中进行设置。</p></dd>
 
 <dt>● [确定][取消][应用]按钮</dt>
-<dd><p>确定使得更改过的设定项目内容生效。点击[确定]使内容生效并关闭窗口，[取消]撤销之前的更改并关闭窗口，[应用]仅使得内容生效而不关闭窗口。</p></dd>
+<dd><p>确定使得更改过的设置项目内容生效。点击[确定]使内容生效并关闭窗口，[取消]撤销之前的更改并关闭窗口，[应用]仅使得内容生效而不关闭窗口。</p></dd>
 </dl>
 
 <h6></h6>
