--- a/RPGVXAcecn/rpgvxace/1130_intro_menubar.html
+++ b/RPGVXAcecn/rpgvxace/1130_intro_menubar.html
@@ -91,7 +91,7 @@
 
 <dl><dd><dl>
 <dt>数据库</dt>
-<dd><p>打开[数据库]设定窗口，制作/编辑角色、道具等要素。</p></dd>
+<dd><p>打开[数据库]设置窗口，制作/编辑角色、道具等要素。</p></dd>
 
 <dt>素材管理</dt>
 <dd>
@@ -113,7 +113,7 @@
 
 <dt>选项</dt>
 <dd>
-  <p>进行有关编辑器上的透明色和网格显示的设定。详情请见<a href="1140_intro_supporttool.html#option">“辅助工具的使用方法”</a>。</p>
+  <p>进行有关编辑器上的透明色和网格显示的设置。详情请见<a href="1140_intro_supporttool.html#option">“辅助工具的使用方法”</a>。</p>
 </dd>
 </dl></dd></dl>
 
