--- a/RPGVXAcecn/rpgvxace/1140_intro_supporttool.html
+++ b/RPGVXAcecn/rpgvxace/1140_intro_supporttool.html
@@ -59,29 +59,29 @@
 
 <img src="img/1140_04.png" alt="角色生成" class="float_r">
 <p>[工具] → [角色生成] 呼出的 [角色生成] 工具，可以轻松制作出分配给角色和事件的人物图像。</p>
-<p>要制作图像，首先要点击[男性][女性]标签切换画面。接着在脸的各部分以及服装等设定项目中，指定元件的种类。点击[随机]按钮的话，每个项目的元件都会随机指定。</p>
-<p>修改了一个项目的设定后，基本上脸图和行走图都会跟着变化。但是，根据项目不同，只有一边的图片发生变化也是有可能的。</p>
+<p>要制作图像，首先要点击[男性][女性]标签切换画面。接着在脸的各部分以及服装等设置项目中，指定元件的种类。点击[随机]按钮的话，每个项目的元件都会随机指定。</p>
+<p>修改了一个项目的设置后，基本上脸图和行走图都会跟着变化。但是，根据项目不同，只有一边的图片发生变化也是有可能的。</p>
 <p>完成图想后，可以保存为图片文件。点击[导出角色肖像图]、[导出角色行走图]按钮，在弹出的窗口中输入文件名（推荐半角英文、数字）后点击[保存]。此外，直接保存在默认的文件夹（“Face”或“Character”）的话，就不需要从[素材管理]导入该文件了。</p>
 
 <h2><a name="option">选项</a></h2>
 
 <img src="img/1140_05.png" alt="选项" class="float_r">
-<p>菜单栏中选择 [工具] → [选项] 后会弹出 [选项] 工具，可以进行有关编辑器上透明色和网格的设置。这些设定完全不影响游戏的运行。</p>
+<p>菜单栏中选择 [工具] → [选项] 后会弹出 [选项] 工具，可以进行有关编辑器上透明色和网格的设置。这些设置完全不影响游戏的运行。</p>
 
 <dl>
 <dt>● 透明色</dt>
-<dd><p>该项可以设定图片的“透明色”部分在编辑器上显示的颜色。该颜色由[红][绿][蓝]三个要素指定。透明色的部分会以使用了指定颜色的方格纹显示。</p></dd>
+<dd><p>该项可以设置图片的“透明色”部分在编辑器上显示的颜色。该颜色由[红][绿][蓝]三个要素指定。透明色的部分会以使用了指定颜色的方格纹显示。</p></dd>
 
 <dt>● 网格</dt>
 <dd>
-  <p>该项可以设定地图编辑模式的地图预览中，网格（方格状的线条）的显示方式。要显示网格时选上[启用]，[横向间隔][纵向间隔]中分别填上网格间隔的图块数（2~100）。</p>
+  <p>该项可以设置地图编辑模式的地图预览中，网格（方格状的线条）的显示方式。要显示网格时选上[启用]，[横向间隔][纵向间隔]中分别填上网格间隔的图块数（2~100）。</p>
 </dd>
 </dl>
 
 <h2><a name="testplay">游戏测试</a></h2>
 
 <img src="img/1140_06.png" alt="游戏测试" class="float_r">
-<p>在菜单栏中的 [游戏] → [游戏测试] 中执行的游戏测试功能，可以当场测试制作中的游戏，并且和发行的游戏一样，确认设定和事件是否能按照自己的想法运转。</p>
+<p>在菜单栏中的 [游戏] → [游戏测试] 中执行的游戏测试功能，可以当场测试制作中的游戏，并且和发行的游戏一样，确认设置和事件是否能按照自己的想法运转。</p>
 
 <dl>
 <dt>● 调试功能的使用方法</dt>
