--- a/RPGVXAcecn/rpgvxace/2140_map_setting.html
+++ b/RPGVXAcecn/rpgvxace/2140_map_setting.html
@@ -9,17 +9,17 @@
 <body>
 <h1><a name="key_map_setting">地图数据的设置</a></h1>
 
-<h2>数据设定的内容</h2>
+<h2>数据设置的内容</h2>
 
 <p>新建地图窗口会在新建地图的时候出现，在进行[地图设置]的时候也会弹出一个一样的窗口。这种窗口允许你创建或者编辑一个地图，设置它的大小、使用的图块组、背景音乐、遇敌条件和其它会影响游戏内容的项目。</p>
 
-<h2>设定项目的内容</h2>
+<h2>设置项目的内容</h2>
 
 <div align="center"><img src="img/2140_01.png" alt="新建地图"></div>
 
 <dl>
 <dt>●名称</dt>
-<dd><p>地图的名称。该设定只在编辑器内部使用（不影响游戏的内容）。</p></dd>
+<dd><p>地图的名称。该设置只在编辑器内部使用（不影响游戏的内容）。</p></dd>
 
 <dt>●显示名称</dt>
 <dd><p>玩家进行游戏的时候现实的名称。</p></dd>
@@ -76,7 +76,7 @@
 <dt><a name="key_map_setting_encounter">●遇敌</a></dt>
 <dd>
 <img src="img/2140_04.png" alt="遇敌" class="float_r">
-<p>指定玩家在地图上移动时会随机碰见的敌人。在区域内双击就会打开一个窗口，然后你就可以设定下面所说的项目。在已有的敌群上右键会弹出一个上下文菜单，里面可以执行复制、粘贴、删除等操作。</p>
+<p>指定玩家在地图上移动时会随机碰见的敌人。在区域内双击就会打开一个窗口，然后你就可以设置下面所说的项目。在已有的敌群上右键会弹出一个上下文菜单，里面可以执行复制、粘贴、删除等操作。</p>
 
 <dl>
 <dt>敌群</dt>
@@ -88,12 +88,12 @@
 </dd>
 
 <dt>出现范围</dt>
-<dd><p>指定敌群出现的区域。如果不管在地图的哪里都一样的计算遇敌，请选中[整张地图]。如果只在一个特定的区域内，请选中[指定区域ID]并且最多设定3个ID。关于区域的设置方法在最下面介绍。</p></dd>
+<dd><p>指定敌群出现的区域。如果不管在地图的哪里都一样的计算遇敌，请选中[整张地图]。如果只在一个特定的区域内，请选中[指定区域ID]并且最多设置3个ID。关于区域的设置方法在最下面介绍。</p></dd>
 </dl>
 </dd>
 
 <dt>●平均遇敌步数</dt>
-<dd><p>指定在地图上移动时遇敌的频率，通过设定一个代表着遇敌步数平均数的值（1~999，经过一个图块即一步）。数值越小频率越高。</p></dd>
+<dd><p>指定在地图上移动时遇敌的频率，通过设置一个代表着遇敌步数平均数的值（1~999，经过一个图块即一步）。数值越小频率越高。</p></dd>
 </dl>
 
 <h2><a name="key_map_setting_region">设置区域</a></h2>
