--- a/RPGVXAcecn/rpgvxace/3110_db_outline.html
+++ b/RPGVXAcecn/rpgvxace/3110_db_outline.html
@@ -13,8 +13,8 @@
 
 <h2>初识数据库</h2>
 
-<p>数据库指的是，除了地图和地图事件之外的所有游戏构成要素的总和。玩家操作的角色、道具、魔法等要素的设定均设置在了以下14种数据中。</p>
-<p>除了[系统]与[用语]之外，所有数据均以游戏中登场的单位分别设置。例：“恢复药水”和“钥匙”这类道具，每个物品都在[物品]中制作数据，设定各自的名称、图像、使用时的效果之类的特征。</p>
+<p>数据库指的是，除了地图和地图事件之外的所有游戏构成要素的总和。玩家操作的角色、道具、魔法等要素的设置均设置在了以下14种数据中。</p>
+<p>除了[系统]与[用语]之外，所有数据均以游戏中登场的单位分别设置。例：“恢复药水”和“钥匙”这类道具，每个物品都在[物品]中制作数据，设置各自的名称、图像、使用时的效果之类的特征。</p>
 <p>工程中的素材文件也可以根据用途放入数据中，从而在游戏中显示/播放。</p>
 
 <table class="sys" border="1" cellspacing="0" cellpadding="4">
@@ -56,10 +56,10 @@
 <td>通用的事件处理</td>
 </tr><tr>
 <th>系统</th>
-<td>初始设定、音乐等游戏总体的基本设定</td>
+<td>初始设置、音乐等游戏总体的基本设置</td>
 </tr><tr>
 <th>用语</th>
-<td>游戏共通的指令、设定项目的名称</td>
+<td>游戏共通的指令、设置项目的名称</td>
 </tr></table>
 
 <h2>数据库的编辑方法</h2>
@@ -70,7 +70,7 @@
 
 <dt>●编辑画面的构成</dt>
 <dd><p>[数据库]窗口的画面上，根据数据的种类分为了多个标签。点击标签可以切换画面，分别制作/编辑各项的数据。</p>
-<p>编辑[系统]和[用语]之外的数据时，首先从窗口左侧的数据表中点击并选择需要编辑的数据。接着，编辑窗口右侧列出的设定项目的内容即可定义数据的特性。</p>
+<p>编辑[系统]和[用语]之外的数据时，首先从窗口左侧的数据表中点击并选择需要编辑的数据。接着，编辑窗口右侧列出的设置项目的内容即可定义数据的特性。</p>
 <p>可以使用快捷键[F4][F5]前后切换数据列表中选择的数据。</p></dd>
 
 <dt>●数据数量的更改</dt>
@@ -81,20 +81,20 @@
 </dl>
 
 <dl><dd><dl><dt>复制</dt>
-<dd><p>将数据的设定内容加入剪贴板。</p></dd>
+<dd><p>将数据的设置内容加入剪贴板。</p></dd>
 <dt>粘贴</dt>
-<dd><p>将剪贴板上的设定内容应用（覆盖）到数据上。操作前数据的设定内容会全部丢失。[批量复制]复制了多项数据到剪切板时，会将剪切板上的数据同时应用到选择的数据下方。</p></dd>
+<dd><p>将剪贴板上的设置内容应用（覆盖）到数据上。操作前数据的设置内容会全部丢失。[批量复制]复制了多项数据到剪切板时，会将剪切板上的数据同时应用到选择的数据下方。</p></dd>
 <dt>清除</dt>
-<dd><p>完全消除数据的设定内容。</p></dd>
+<dd><p>完全消除数据的设置内容。</p></dd>
 <dt>批量复制</dt>
-<dd><p>将多项数据的设定内容一起加入剪贴板。需要指定从右击的项目开始，需要加入剪贴板的数据项目数。</p></dd></dl></dd></dl>
+<dd><p>将多项数据的设置内容一起加入剪贴板。需要指定从右击的项目开始，需要加入剪贴板的数据项目数。</p></dd></dl></dd></dl>
 
 <dl>
 <dt>●数据ID</dt>
 <dd><p>在数据列表各项目前方的数字表示该数据的ID（固定编号）。这个ID可以用于事件指令中用变量指定需要处理的对象数据之类的情况。</p></dd>
 
 <dt>●备注栏的应用</dt>
-<dd><p>一部分数据（角色/职业/技能/道具/武器/防具/敌人/状态/图块）的设定项目中有一个备注栏。这个备注栏可以在制作游戏时用于自由记录备注，完全不影响游戏的进程。</p></dd>
+<dd><p>一部分数据（角色/职业/技能/道具/武器/防具/敌人/状态/图块）的设置项目中有一个备注栏。这个备注栏可以在制作游戏时用于自由记录备注，完全不影响游戏的进程。</p></dd>
 </dl>
 
 
