--- a/RPGVXAcecn/rpgvxace/3230_db_skill.html
+++ b/RPGVXAcecn/rpgvxace/3230_db_skill.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>技能设定</title>
+<title>技能设置</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1><a name="key_skill">技能设定</a></h1>
+<h1><a name="key_skill">技能设置</a></h1>
 
 <h2>数据的用途</h2>
 
 <p>该数据定义了角色在战斗中采取的行动，如攻击、防御、技能（特技和魔法）等等。</p>
 
-<h2>设定项目的内容</h2>
+<h2>设置项目的内容</h2>
 
 <div align="center"><img src="img/3230_01.png" alt="技能"></div>
 <dl>
@@ -29,7 +29,7 @@
 
 <dt>●技能类型</dt>
 <dd>
-  <p>指定了技能的类别。默认的类别只有[特技][魔法]两类，<a href="3340_db_terms.html">[用语]</a>中可以更改该设定。除了设为[无]的之外，各技能都只有赋予了[添加技能类型]的角色和职业才能使用。</p>
+  <p>指定了技能的类别。默认的类别只有[特技][魔法]两类，<a href="3340_db_terms.html">[用语]</a>中可以更改该设置。除了设为[无]的之外，各技能都只有赋予了[添加技能类型]的角色和职业才能使用。</p>
 </dd>
 
 <dt>●魔力值消耗/特技值消耗</dt>
@@ -106,7 +106,7 @@
 
 <dt>●武器类型1/武器类型2</dt>
 <dd>
-  <p>使用技能必须要装备的武器，作为技能的使用条件。两栏中分别指定一种武器类型。两边都设为[无]的情况下技能可以无条件使用。两种都设定的情况下，只要装备任意一种武器即可使用。</p>
+  <p>使用技能必须要装备的武器，作为技能的使用条件。两栏中分别指定一种武器类型。两边都设为[无]的情况下技能可以无条件使用。两种都设置的情况下，只要装备任意一种武器即可使用。</p>
 </dd>
 
 <dt>●伤害</dt>
@@ -179,7 +179,7 @@
 
 <dt>●使用效果</dt>
 <dd>
-  <p>除了伤害之外的效果内容。双击此处可以打开[使用效果]窗口进行设定。详情请见<a href="3420_db_effect.html">“使用效果的设定方法”</a>。</p>
+  <p>除了伤害之外的效果内容。双击此处可以打开[使用效果]窗口进行设置。详情请见<a href="3420_db_effect.html">“使用效果的设置方法”</a>。</p>
 </dd>
 </dl>
 </dl>
