--- a/RPGVXAcecn/rpgvxace/3250_db_arms.html
+++ b/RPGVXAcecn/rpgvxace/3250_db_arms.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>武器/护甲设定</title>
+<title>武器/护甲设置</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1><a name="key_arms"></a><a name="key_wear"></a>武器/护甲设定</h1>
+<h1><a name="key_arms"></a><a name="key_wear"></a>武器/护甲设置</h1>
 
 <h2>数据的用途</h2>
 
 <p>武器和护甲的数据表示角色的装备，可以将特定能力值的增减和特殊的能力赋予角色。</p>
 
-<h2>设定项目的内容</h2>
+<h2>设置项目的内容</h2>
 
 <div align="center"><img src="img/3250_01.png" alt="武器/护甲"></div>
 <dl>
@@ -29,7 +29,7 @@
 
 <dt>●武器类型/护甲类型</dt>
 <dd>
-  <p>武器/护甲的种类。在角色的职业和特性设定中作为能否装备的判断依据。能够选择的武器/护甲种类设定可以在<a href="3340_db_terms.html">[用语]</a>处更改。</p>
+  <p>武器/护甲的种类。在角色的职业和特性设置中作为能否装备的判断依据。能够选择的武器/护甲种类设置可以在<a href="3340_db_terms.html">[用语]</a>处更改。</p>
 </dd>
 
 <dt>●装备位置（仅护甲数据）</dt>
@@ -44,7 +44,7 @@
 
 <dt>●特性</dt>
 <dd>
-  <p>定义该装备赋予装备者的特性。双击设定栏会打开一个窗口，在打开的窗口中定义内容。详情请见<a href="3410_db_feature.html">“特性的设定方法”</a>。</p>
+  <p>定义该装备赋予装备者的特性。双击设置栏会打开一个窗口，在打开的窗口中定义内容。详情请见<a href="3410_db_feature.html">“特性的设置方法”</a>。</p>
 </dd>
 </dl>
 
