--- a/RPGVXAcecn/rpgvxace/3280_db_enemygroup.html
+++ b/RPGVXAcecn/rpgvxace/3280_db_enemygroup.html
@@ -2,28 +2,28 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>敌群设定</title>
+<title>敌群设置</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1><a name="key_enemygroup">敌群设定</a></h1>
+<h1><a name="key_enemygroup">敌群设置</a></h1>
 
 <h2>数据的用途</h2>
 
-<p>敌群数据是设定游戏中出现的敌人集团。在地图上移动时遇敌，或者事件指令战斗处理的敌人都是通过该数据来指定的。即使只和一个敌人战斗，也需要准备一个“只有一个敌人的敌群”。“战斗事件”（战斗中的事件处理）也是在敌群中分别设置的。</p>
+<p>敌群数据是设置游戏中出现的敌人集团。在地图上移动时遇敌，或者事件指令战斗处理的敌人都是通过该数据来指定的。即使只和一个敌人战斗，也需要准备一个“只有一个敌人的敌群”。“战斗事件”（战斗中的事件处理）也是在敌群中分别设置的。</p>
 
-<h2>设定项目的内容</h2>
+<h2>设置项目的内容</h2>
 
 <div align="center"><img src="img/3280_01.png" alt="敌群"></div>
 <dl>
 <dt>●名称</dt>
-<dd><p>敌群的名称。该设定只在编辑器内部使用（不影响游戏的内容）。点击[自动命名]按钮后，会根据敌群中的敌人自动生成名称。</p></dd>
+<dd><p>敌群的名称。该设置只在编辑器内部使用（不影响游戏的内容）。点击[自动命名]按钮后，会根据敌群中的敌人自动生成名称。</p></dd>
 <dt>●更改战斗背景图</dt>
-<dd><p>更改配置预览里显示的战斗背景。打开的窗口中，在左边栏指定远景，在右边栏指定地面使用的图片。该设定只在编辑器内部使用（不影响游戏的内容），并且和其他敌群数据共用。</p></dd>
+<dd><p>更改配置预览里显示的战斗背景。打开的窗口中，在左边栏指定远景，在右边栏指定地面使用的图片。该设置只在编辑器内部使用（不影响游戏的内容），并且和其他敌群数据共用。</p></dd>
 <dt>●战斗测试</dt>
-<dd><p>执行敌群的战斗测试。在打开的窗口上[1]~[4]的标签里，分别指定参加战斗的角色、装备、等级。（[状态]栏会根据设定的内容显示能力值）点击[确定]后，就会打开窗口开始战斗了。关闭窗口后战斗测试结束。</p></dd>
+<dd><p>执行敌群的战斗测试。在打开的窗口上[1]~[4]的标签里，分别指定参加战斗的角色、装备、等级。（[状态]栏会根据设置的内容显示能力值）点击[确定]后，就会打开窗口开始战斗了。关闭窗口后战斗测试结束。</p></dd>
 <dt>●配置预览</dt>
 <dd><p>敌群中包含的敌人。一个敌群最多包含8个（包括同类）的敌人。</p>
 <p>拖拽配置预览上的敌人可以改变敌人的位置。（通常以8像素为单位，按住[Alt]键拖拽时以2像素为单位）。右击选中[中途出现]时，该敌人在战斗事件中执行事件指令[敌人出现]后才会出现。</p>
@@ -43,16 +43,16 @@
 </dl>
 
 
-<h2><a name="key_enemygroup_battleevent">战斗事件的设定内容</a></h2>
+<h2><a name="key_enemygroup_battleevent">战斗事件的设置内容</a></h2>
 
-<p>[战斗事件]中，可以设定队伍和敌群战斗中执行事件的条件和内容。和地图事件一样，可以利用事件页的出现条件来对事件的内容“分情况处理”。</p>
+<p>[战斗事件]中，可以设置队伍和敌群战斗中执行事件的条件和内容。和地图事件一样，可以利用事件页的出现条件来对事件的内容“分情况处理”。</p>
 <dl>
 <dt>●事件页的操作</dt>
 <dd><p>左侧的按钮[新建事件页][复制事件页][粘贴事件页][删除事件页][清空事件页]可以用来操作事件页，功能与地图事件相同。</p></dd>
 <dt>●条件</dt>
 <dd>
 <img src="img/3280_02.png" alt="条件" class="float_r">
-  <p>执行事件页的条件。按下[…]按钮打开[条件]窗口，从以下5种条件中选择启用，并分别设定判定基准。战斗事件和地图事件不同，没有指定任何条件的事件页不会被执行。同时，有多个事件页同时满足条件时，ID最小的事件页会执行。</p>
+  <p>执行事件页的条件。按下[…]按钮打开[条件]窗口，从以下5种条件中选择启用，并分别设置判定基准。战斗事件和地图事件不同，没有指定任何条件的事件页不会被执行。同时，有多个事件页同时满足条件时，ID最小的事件页会执行。</p>
 <dl>
 <dt>回合结束时</dt>
 <dd><p>回合结束时会满足条件。</p></dd>
@@ -78,7 +78,7 @@
 </dl></dd>
 
 <dt>●执行内容</dt>
-<dd><p>满足[条件]和[间隔]时，通过事件指令来设定要执行的内容。编辑方法和地图事件的<a href="4140_ev_mapevent_setting.html#command_list">[执行内容]</a>相同。</p>
+<dd><p>满足[条件]和[间隔]时，通过事件指令来设置要执行的内容。编辑方法和地图事件的<a href="4140_ev_mapevent_setting.html#command_list">[执行内容]</a>相同。</p>
 </dd>
 </dl>
 
