--- a/RPGVXAcecn/rpgvxace/3300_db_animation.html
+++ b/RPGVXAcecn/rpgvxace/3300_db_animation.html
@@ -2,27 +2,27 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>动画设定</title>
+<title>动画设置</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1><a name="key_animation">动画设定</a></h1>
+<h1><a name="key_animation">动画设置</a></h1>
 
 <h2>数据的用途</h2>
 
 <p>动画是战斗画面中攻击敌人时播放，或者是地图画面上播放的视觉演出用数据。图片的样式（单元）可以在“帧”中设置。</p>
 
-<h2>设定项目的内容</h2>
+<h2>设置项目的内容</h2>
 
 <div align="center"><img src="img/3300_01.png" alt="动画"></div>
 <dl><dt>●名称</dt>
-<dd><p>动画的名称。该设定只在编辑器内部使用（不影响游戏的内容）。</p></dd>
+<dd><p>动画的名称。该设置只在编辑器内部使用（不影响游戏的内容）。</p></dd>
 <dt>●动画图像</dt>
 <dd><p>制作动画使用的图片文件（最多两张）。在各栏按下[…]按钮会打开[动画图像]窗口，在其中指定使用的文件。同时，可以滑动[色调]条来更改图片的色调。指定文件后，图案会显示在[图案面板]中。</p></dd>
 <dt>●基础位置</dt>
-<dd><p>指定动画显示的位置。选择[头顶][中心][脚底]的话，会分别以对象的上方、中央、下方为基准。选择[画面]的话会覆盖在整个画面上。此外，动画设定为该动画的技能和物品的效果范围是全体时，设定为[头顶][中心][脚底]的动画会在每个人物上分别显示。</p></dd>
+<dd><p>指定动画显示的位置。选择[头顶][中心][脚底]的话，会分别以对象的上方、中央、下方为基准。选择[画面]的话会覆盖在整个画面上。此外，动画设置为该动画的技能和物品的效果范围是全体时，设置为[头顶][中心][脚底]的动画会在每个人物上分别显示。</p></dd>
 <dt>●帧数</dt>
 <dd><p>动画总共的帧数（1~200）。按下[…]按钮会打开一个窗口，在其中指定帧数。对应数量的帧会在帧列表中显示出来。减少帧数时，编号超过该帧数的帧都会被删除。</p></dd>
 <dt>●声效与闪烁效果</dt>
@@ -51,7 +51,7 @@
 <dd><p>当前帧的内容。在这里可以将[图案面板]中的图片设置为“单元”，以此来设置显示的内容。绿色的矩形表示游戏窗口中的显示范围。</p>
 <p>编辑方法见后文“帧预览的操作方法”。</p></dd>
 <dt>●更改战斗图</dt>
-<dd><p>更改帧预览中敌人的战斗图。该设定只在编辑器内部使用（不影响游戏的内容）。</p></dd>
+<dd><p>更改帧预览中敌人的战斗图。该设置只在编辑器内部使用（不影响游戏的内容）。</p></dd>
 <dt>●继承上帧</dt>
 <dd><p>将上一帧中的单元粘贴到当前帧。</p></dd>
 <dt>●复制帧</dt>
@@ -59,9 +59,9 @@
 <dt>●清除帧</dt>
 <dd><p>将指定范围内的帧一并清除。指定要清除的帧的起始编号和结束编号。</p></dd>
 <dt>●补间帧</dt>
-<dd><p>以指定的两帧为基础，自动设定两帧之间的其他帧。[帧]和[单元]中填入补间的帧和单元的范围，[补间内容]中选择需要补间的项目之后点击[确定]。举例来说，同一单元第1帧在左端，第10帧在右端时，以位置作为补间内容，就可以在2~9帧中从左往右自动设置这一单元到不同的位置。</p></dd>
+<dd><p>以指定的两帧为基础，自动设置两帧之间的其他帧。[帧]和[单元]中填入补间的帧和单元的范围，[补间内容]中选择需要补间的项目之后点击[确定]。举例来说，同一单元第1帧在左端，第10帧在右端时，以位置作为补间内容，就可以在2~9帧中从左往右自动设置这一单元到不同的位置。</p></dd>
 <dt>●统一设置单元</dt>
-<dd><p>将指定范围内的所有帧的单元设为同一内容。在[帧]和[单元]中指定帧和单元的范围，在设定的目标上打上勾并指定对应的设定值。</p></dd>
+<dd><p>将指定范围内的所有帧的单元设为同一内容。在[帧]和[单元]中指定帧和单元的范围，在设置的目标上打上勾并指定对应的设置值。</p></dd>
 <dt>●整体移动坐标</dt>
 <dd><p>将指定范围内的帧中的单元做整体性移动。</p></dd>
 <dt>●播放</dt>
@@ -93,7 +93,7 @@
 <dl><dd><dl>
 <dt>▼上下文菜单的项目</dt>
 
-<dt>设定</dt>
+<dt>设置</dt>
 <dd><p>打开设置单元窗口（下述）。</p></dd>
 <dt>撤销</dt>
 <dd><p>撤销上一步操作，返回到操作前的状态。最多可以回到8步前。</p></dd>
@@ -121,7 +121,7 @@
 <dt>旋转角度</dt>
 <dd><p>单元显示的角度（0~360°）。图案会根据指定的角度逆时针旋转。滥用可能导致游戏处理缓慢。</p></dd>
 <dt>左右翻转</dt>
-<dd><p>设定为[是]时，图案显示时会左右翻转。</p></dd>
+<dd><p>设置为[是]时，图案显示时会左右翻转。</p></dd>
 <dt>不透明度</dt>
 <dd><p>单元的不透明度（0~255）。值越小，透明度越高。设为0即为不可见。</p></dd>
 <dt>合成方式</dt>
