--- a/RPGVXAcecn/rpgvxace/3320_db_commonevent.html
+++ b/RPGVXAcecn/rpgvxace/3320_db_commonevent.html
@@ -2,24 +2,24 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>公共事件设定</title>
+<title>公共事件设置</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1><a name="key_commonevent">公共事件设定</a></h1>
+<h1><a name="key_commonevent">公共事件设置</a></h1>
 
 <h2>数据的用途</h2>
 
 <p>公共事件是在游戏中任何时候都可以执行的事件，可以定义一些作用于整个游戏的泛用处理，包括定期监视游戏状况，在使用道具和技能时执行一些处理等等。制作出的公共事件，可以通过事件指令[公共事件]，或者打开特定开关来执行。</p>
 
-<h2>设定项目的内容</h2>
+<h2>设置项目的内容</h2>
 
 <div align="center"><img src="img/3320_01.png" alt="公共事件"></div>
 <dl>
 <dt>●名称</dt>
-<dd><p>公共事件的名称。该设定只在编辑器内部使用（不影响游戏的内容）。</p></dd>
+<dd><p>公共事件的名称。该设置只在编辑器内部使用（不影响游戏的内容）。</p></dd>
 <dt><a name="key_commonevent_trigger">●触发条件</a></dt>
 <dd>
   <p>从以下选择中指定一个作为开始[执行内容]处理的时机。[并行处理]和[自动执行]只会在地图画面的时候触发。</p>
@@ -40,7 +40,7 @@
 <dd><p>触发条件中指定了[自动执行]或者[并行处理]时，在这里指定一个开关作为开始处理的信号。有多个公共事件指定了同一个开关时，ID 最小的（列表最上方的）将会得到执行。</p></dd>
 
 <dt>●执行内容</dt>
-<dd><p>通过事件指令设定公共事件所要执行的处理。编辑方法与<a href="4140_ev_mapevent_setting.html#command_list">[执行内容]</a>相同。</p>
+<dd><p>通过事件指令设置公共事件所要执行的处理。编辑方法与<a href="4140_ev_mapevent_setting.html#command_list">[执行内容]</a>相同。</p>
 </dd>
 </dl>
 
