--- a/RPGVXAcecn/rpgvxace/3330_db_system.html
+++ b/RPGVXAcecn/rpgvxace/3330_db_system.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>系统设定</title>
+<title>系统设置</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1><a name="key_system">系统设定</a></h1>
+<h1><a name="key_system">系统设置</a></h1>
 
 <h2>数据的用途</h2>
 
-<p>系统数据整合了游戏的初始设定，如开始游戏时队伍的构成及位置，游戏中各种场景时播放的音乐等等。</p>
+<p>系统数据整合了游戏的初始设置，如开始游戏时队伍的构成及位置，游戏中各种场景时播放的音乐等等。</p>
 
-<h2>设定项目的内容</h2>
+<h2>设置项目的内容</h2>
 
 <div align="center"><img src="img/3330_01.png" alt="系统"></div>
 <dl>
@@ -25,7 +25,7 @@
 <p>要添加/更改角色，可以双击列表内的项目（添加时双击空白处）指定角色。要减少角色，在对应的角色上右击，并在弹出的菜单中[删除]即可。</p></dd>
 
 <dt>●游戏标题</dt>
-<dd><p>游戏名。新建工程时在[游戏标题]中输入的名字会设定在这里。这个名字会显示在游戏的标题画面和窗口的标题栏上。</p></dd>
+<dd><p>游戏名。新建工程时在[游戏标题]中输入的名字会设置在这里。这个名字会显示在游戏的标题画面和窗口的标题栏上。</p></dd>
 
 <dt><a name="key_system_shipgraphic">●载具图像</a></dt>
 <dd><p>显示在地图上的载具（小舟/大船/飞艇）的图片。双击各栏，并在打开的窗口中指定图像。不需要显示图像时指定[（无）]。</p>
@@ -37,7 +37,7 @@
 <dd><p>游戏中窗口的背景色。双击方框会打开一个窗口，在其中指定[红][绿][蓝]的成分比。</p></dd>
 
 <dt>●选项</dt>
-<dd><p>设定有关游戏运行的特殊处理和规则。</p></dd>
+<dd><p>设置有关游戏运行的特殊处理和规则。</p></dd>
 </dl>
 
 <dl><dd><dl>
@@ -65,7 +65,7 @@
 
 <dl>
 <dt><a name="key_system_bgm">●音乐</a></dt>
-<dd><p>游戏中播放的音乐。对每个情景设定一个要播放的BGM或ME。各个设定项目对应的情景如下。此外，玩家在地图上移动是播放的音乐在地图数据中设定。</p></dd>
+<dd><p>游戏中播放的音乐。对每个情景设置一个要播放的BGM或ME。各个设置项目对应的情景如下。此外，玩家在地图上移动是播放的音乐在地图数据中设置。</p></dd>
 <dd>
 <table class="sys" border="1" cellspacing="0" cellpadding="4">
 <tr>
@@ -100,7 +100,7 @@
 </dd>
 
 <dt><a name="key_system_se">●声音</a></dt>
-<dd><p>在玩家操作、战斗行动开始等时刻播放的音效（SE）。对每一种状况指定一个要播放的SE文件。各个设定项目对应的状况如下。</p></dd>
+<dd><p>在玩家操作、战斗行动开始等时刻播放的音效（SE）。对每一种状况指定一个要播放的SE文件。各个设置项目对应的状况如下。</p></dd>
 <dd>
 <table class="sys" border="1" cellspacing="0" cellpadding="4">
 <tr>
@@ -203,14 +203,14 @@
 </dd>
 
 <dt><a name="key_system_initialposition">●初始位置</a></dt>
-<dd><p>玩家和载具（小舟/大船/飞艇）在游戏开始时的位置。各栏点击[…]可以打开设定窗口，在左边栏指定地图名，右边栏指定位置。</p>
+<dd><p>玩家和载具（小舟/大船/飞艇）在游戏开始时的位置。各栏点击[…]可以打开设置窗口，在左边栏指定地图名，右边栏指定位置。</p>
 <p>指定了初始位置的地方，在地图上会显示一个带有文字[S]的图标。这个[S]标志可以和事件一样拖拽移动，按[Del]键可以删除。</p>
-<p>但是，未设定玩家的初始位置的状态下（删除了图标），是无法开始游戏的。</p></dd>
+<p>但是，未设置玩家的初始位置的状态下（删除了图标），是无法开始游戏的。</p></dd>
 
 <dt>●标题画面</dt>
 <dd>
 <img src="img/3330_02.png" alt="标题画面" class="float_r">
-<p>游戏开始后，在游戏画面一开始显示的图像。在设定栏中点击[…]可以打开窗口，在其中指定图像。启用[绘制标题文字]后，在标题画面上方会显示[游戏标题]中所设定的作品名。（图像包含标题名时可以禁用）</p><br></dd>
+<p>游戏开始后，在游戏画面一开始显示的图像。在设置栏中点击[…]可以打开窗口，在其中指定图像。启用[绘制标题文字]后，在标题画面上方会显示[游戏标题]中所设置的作品名。（图像包含标题名时可以禁用）</p><br></dd>
 </dl>
 
 
