--- a/RPGVXAcecn/rpgvxace/3410_db_feature.html
+++ b/RPGVXAcecn/rpgvxace/3410_db_feature.html
@@ -2,27 +2,27 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>特性的设定方法</title>
+<title>特性的设置方法</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1><a name="key_feature">特性的设定方法</a></h1>
+<h1><a name="key_feature">特性的设置方法</a></h1>
 
-<h2>设定概要</h2>
+<h2>设置概要</h2>
 
-<p>角色、职业、武器、护甲、敌人、状态中，每个数据都有[特性]的设定，可以定义各项数据特有的性质和功能。</p>
+<p>角色、职业、武器、护甲、敌人、状态中，每个数据都有[特性]的设置，可以定义各项数据特有的性质和功能。</p>
 <p>可以赋予的性质有如下24种。将这些性质与想要制作的数据内容对照，附加给数据的话，就可以使数据拥有复杂的特性。</p>
 <p>职业、武器、护甲、状态的特性，各自的数据附加（装备）到角色上时，特性就会反映在那个角色上。</p>
-<p>另外，永久性制约行动的特性需要特别关注。比如说，如果武器设定了“固定装备-武器”，那么角色装备上之后就再也无法解除了。</p>
+<p>另外，永久性制约行动的特性需要特别关注。比如说，如果武器设置了“固定装备-武器”，那么角色装备上之后就再也无法解除了。</p>
 
-<h2>设定方法</h2>
+<h2>设置方法</h2>
 
 <img src="img/3410_01.png" alt="特徴設定" class="float_r">
 
-<p>双击特性设定栏的空白处即可设定特性。在打开的窗口中指定性质的种类和造成的影响。</p>
-<p>设定完成的性质，其内容会显示在[特性]列表里。双击各个项目可以再次编辑。右击项目可以弹出一个上下文菜单，执行设定的复制、删除等操作。</p><br>
+<p>双击特性设置栏的空白处即可设置特性。在打开的窗口中指定性质的种类和造成的影响。</p>
+<p>设置完成的性质，其内容会显示在[特性]列表里。双击各个项目可以再次编辑。右击项目可以弹出一个上下文菜单，执行设置的复制、删除等操作。</p><br>
 
 <h2>各特性项目的内容</h2>
 
@@ -104,14 +104,14 @@
 <dd><p>使得指定部位无法装备物品。可以表现出禁用盾牌的“双手武器”和禁用头盔的“全副武装”。</p></dd>
 
 <dt>装备风格</dt>
-<dd><p>只能设定[二刀流]。这使得角色无法装备盾牌，但可以同时装备两把武器。</p></dd>
+<dd><p>只能设置[二刀流]。这使得角色无法装备盾牌，但可以同时装备两把武器。</p></dd>
 </dl></dd>
 
 <dt>●[其他]标签</dt>
 <dd>
 <dl>
 <dt>增加行动次数</dt>
-<dd><p>以指定的概率在战斗中增加一次行动。多次添加这一项时，每一项的概率都会单独计算，最后判定最终的行动次数。比如说，添加了两个50%的设定的话，那么行动次数增加两次以及一次都不增加，两者的概率都会是25%（50%×50%）。</p></dd>
+<dd><p>以指定的概率在战斗中增加一次行动。多次添加这一项时，每一项的概率都会单独计算，最后判定最终的行动次数。比如说，添加了两个50%的设置的话，那么行动次数增加两次以及一次都不增加，两者的概率都会是25%（50%×50%）。</p></dd>
 
 <dt>特殊标志</dt>
 <dd><p>赋予有关战斗行动的特性。</p>
@@ -163,7 +163,7 @@
 </tr>
 <tr>
 <th>物品掉落几率双倍</th>
-<td>队伍战斗胜利时，获得敌人掉落物品的概率变为平常的两倍（仅限打败的敌人设定了掉落物品时）。</td>
+<td>队伍战斗胜利时，获得敌人掉落物品的概率变为平常的两倍（仅限打败的敌人设置了掉落物品时）。</td>
 </tr>
 <tr>
 </table>
