--- a/RPGVXAcecn/rpgvxace/3420_db_effect.html
+++ b/RPGVXAcecn/rpgvxace/3420_db_effect.html
@@ -2,25 +2,25 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>使用效果的设定方法</title>
+<title>使用效果的设置方法</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1><a name="key_effect">使用效果的设定方法</a></h1>
+<h1><a name="key_effect">使用效果的设置方法</a></h1>
 
-<h2>设定概要</h2>
+<h2>设置概要</h2>
 
-<p>技能和物品数据中，有一个[使用效果]的设定。当这些技能物品使用于角色/敌人时，[使用效果]可以定义其作用效果。</p>
-<p>可以赋予的效果有以下13种。设定多个效果就可以表现出拥有复合效果的技能/物品。</p>
+<p>技能和物品数据中，有一个[使用效果]的设置。当这些技能物品使用于角色/敌人时，[使用效果]可以定义其作用效果。</p>
+<p>可以赋予的效果有以下13种。设置多个效果就可以表现出拥有复合效果的技能/物品。</p>
 
-<h2>设定方法</h2>
+<h2>设置方法</h2>
 
 <img src="img/3420_01.png" alt="使用效果" class="float_r">
 
-<p>双击设定栏中的空行即可设定效果。在弹出的窗口中选定效果类别，效果涉及的对象以及效果的大小。</p>
-<p>设定完成后，效果的内容会显示在[使用效果]列表。双击设定完成的项目可以再次编辑。此外，右击项目之后会弹出上下文菜单，执行复制设定、删除设定等操作。</p>
+<p>双击设置栏中的空行即可设置效果。在弹出的窗口中选定效果类别，效果涉及的对象以及效果的大小。</p>
+<p>设置完成后，效果的内容会显示在[使用效果]列表。双击设置完成的项目可以再次编辑。此外，右击项目之后会弹出上下文菜单，执行复制设置、删除设置等操作。</p>
 <br>
 <h2>使用效果的项目内容</h2>
 
@@ -29,7 +29,7 @@
 <dd>
 <dl>
 <dt>恢复体力值</dt>
-<dd><p>恢复体力值（增加到当前值）。恢复的值指定为相对目标体力上限的比率（0~100%）和一个定值（0~9999）的和。只想使用一种作为基准值时，将另一种设为0即可。该效果设定在物品上的时候，恢复值会根据使用者的特殊能力[药理知识]相应增减。</p></dd>
+<dd><p>恢复体力值（增加到当前值）。恢复的值指定为相对目标体力上限的比率（0~100%）和一个定值（0~9999）的和。只想使用一种作为基准值时，将另一种设为0即可。该效果设置在物品上的时候，恢复值会根据使用者的特殊能力[药理知识]相应增减。</p></dd>
 
 <dt>恢复魔力值</dt>
 <dd><p>恢复魔力值（增加到当前值）。恢复的值指定为相对目标魔力上限的比率（0~100%）和一个定值（0~9999）的和。只想使用一种作为基准值时，将另一种设为0即可。</p></dd>
@@ -68,7 +68,7 @@
 <dd>
 <dl>
 <dt>特殊效果</dt>
-<dd><p>只能设定[撤退]。让目标角色从战斗中脱离。角色受到该效果时，将不会得到经验值。</p></dd>
+<dd><p>只能设置[撤退]。让目标角色从战斗中脱离。角色受到该效果时，将不会得到经验值。</p></dd>
 
 <dt>能力提升</dt>
 <dd><p>永久提升能力值。指定要提升的能力值和提升值（1~1000）。</p></dd>
@@ -77,7 +77,7 @@
 <dd><p>使角色学会指定的技能。该效果对敌人无效。</p></dd>
 
 <dt>公共事件</dt>
-<dd><p>执行指定的公共事件。每项数据只能设定一个公共事件。</p></dd>
+<dd><p>执行指定的公共事件。每项数据只能设置一个公共事件。</p></dd>
 </dl></dd>
 </dl>
 
