--- a/RPGVXAcecn/rpgvxace/4130_ev_mapevent_operation.html
+++ b/RPGVXAcecn/rpgvxace/4130_ev_mapevent_operation.html
@@ -24,7 +24,7 @@
 </dd>
 
 <dt>●编辑和移动地图事件</dt>
-<dd><p>地图上的事件会在编辑器中的相应位置显示一个图标（使用第一个事件页的图形）。双击这个图标就可以打开[编辑事件]窗口，然后编辑事件的设定内容。你也可以拖动这个图标来移动事件。</p></dd>
+<dd><p>地图上的事件会在编辑器中的相应位置显示一个图标（使用第一个事件页的图形）。双击这个图标就可以打开[编辑事件]窗口，然后编辑事件的设置内容。你也可以拖动这个图标来移动事件。</p></dd>
 
 <dt>●上下文菜单的操作</dt>
 <dd><p>在事件编辑模式下，在地图预览上右键会弹出一个上下文菜单，里面包含了一些对事件的操作，包括复制、删除等。各个命令的功能将在下面介绍。</p></dd>
