--- a/RPGVXAcecn/rpgvxace/4140_ev_mapevent_setting.html
+++ b/RPGVXAcecn/rpgvxace/4140_ev_mapevent_setting.html
@@ -10,7 +10,7 @@
 
 <h1>地图事件的设置</h1>
 
-<h2>通用设定与事件页管理</h2>
+<h2>通用设置与事件页管理</h2>
 
 <div align="center"><img src="img/4140_01.png" alt="地图事件的设置"></div>
 <dl>
@@ -18,7 +18,7 @@
 <dd><p>每个事件独有的编号。ID会按事件创建的先后自动分配。可以用变量指定特定ID的事件。</p></dd>
 
 <dt>●名称</dt>
-<dd><p>事件的名称。该设定只在编辑器内部使用（不影响游戏的内容）。默认的名称是 &quot;EV&quot; + 事件ID。可以用名称来记忆事件的用途。</p></dd>
+<dd><p>事件的名称。该设置只在编辑器内部使用（不影响游戏的内容）。默认的名称是 &quot;EV&quot; + 事件ID。可以用名称来记忆事件的用途。</p></dd>
 
 <dt>●事件页编号</dt>
 <dd><p>事件页的编号会在每个标签上显示。单击各标签就可以编辑对应的事件页。</p></dd>
@@ -44,9 +44,9 @@
 <dd><p>将当前事件页的内容清空（回到初始状态）。</p></dd>
 </dl></dd></dl>
 
-<h2>事件页的设定项目</h2>
+<h2>事件页的设置项目</h2>
 
-<div align="center"><img src="img/4140_02.png" alt="地图事件的设定项目"></div>
+<div align="center"><img src="img/4140_02.png" alt="地图事件的设置项目"></div>
 <dl>
 <dt>●出现条件</dt>
 <dd><p>事件页是否出现取决于事件页上设置的条件。选中你希望生效的项目，并将其设置到你希望的值。可用的条件有[开关]，[变量]，[独立开关]，[物品]和[角色]。</p>
