--- a/RPGVXAcecn/rpgvxace/5110_ev_ref_message.html
+++ b/RPGVXAcecn/rpgvxace/5110_ev_ref_message.html
@@ -17,7 +17,7 @@
 <dl>
 <dt>●功能</dt>
 <dd><p>打开消息窗口并显示文字。</p></dd>
-<dt>●设定项目</dt>
+<dt>●设置项目</dt>
 </dl>
 
 <dl><dd><dl>
@@ -33,7 +33,7 @@
 <dd><p>点击后可以确认文章实际的显示效果。</p></dd>
 <dt>批量输入文字</dt>
 <dd>
-  <p>启用后允许一次输入超过4行的文字。超过4行的部分，会每四行分割为一个[显示文字]的事件指令，设定在执行内容的列表中。</p>
+  <p>启用后允许一次输入超过4行的文字。超过4行的部分，会每四行分割为一个[显示文字]的事件指令，设置在执行内容的列表中。</p>
 </dd>
 </dl></dd></dl>
 
@@ -41,7 +41,7 @@
 <dt>●备注</dt>
 <dd><p>· 输入文章时按下[Ctrl]+[Enter]，相当于点击了[确定]。</p>
 <p>· 文字栏上方的“▼”标记定位了消息窗口可以显示的文字数（内侧的“▼”定位了带肖像图时显示的文字数）。输入文字时，点击[预览]确认文字是否能按照要求显示。</p>
-<p>· [背景]和[显示位置]的设定不会体现在战斗时的消息窗口中。</p>
+<p>· [背景]和[显示位置]的设置不会体现在战斗时的消息窗口中。</p>
 <p>· 在文章里输入控制符后，可以显示变量的值和角色的名字等。控制符及其显示的内容如下。控制符请务必用半角文字输入。</p></dd>
 </dl>
 
@@ -61,7 +61,7 @@
 <td>置换为货币单位。</td>
 </tr><tr>
 <th>\C[n]</th>
-<td>将后面的文字显示为第n号颜色。颜色的编号以窗口皮肤中设定的图片内容为准。</td>
+<td>将后面的文字显示为第n号颜色。颜色的编号以窗口皮肤中设置的图片内容为准。</td>
 </tr><tr>
 <th>\I[n]</th>
 <td>绘制第n号图标。</td>
@@ -110,7 +110,7 @@
 <dl>
 <dt>●功能</dt>
 <dd><p>在消息窗口中显示选项（最多4项），并根据玩家的选择使事件处理产生分支。</p></dd>
-<dt>●设定项目</dt>
+<dt>●设置项目</dt>
 </dl>
 
 <dl><dd><dl>
@@ -122,7 +122,7 @@
 
 <dl>
 <dt>●备注</dt>
-<dd><p>· 决定了设定项目后，在[执行内容]中制作各选项（包括取消）的分支。在这些分支里面设定选择对应选项后需要执行的内容。</p>
+<dd><p>· 决定了设置项目后，在[执行内容]中制作各选项（包括取消）的分支。在这些分支里面设置选择对应选项后需要执行的内容。</p>
 <p>· 如果消息窗口显示时，空白部分可以写得下全部选项，那么选项会跟着显示。</p></dd>
 </dl>
 <br>
@@ -132,7 +132,7 @@
 <dl>
 <dt>●功能</dt>
 <dd><p>显示数值输入画面，将玩家输入的数值代入变量。</p></dd>
-<dt>●设定项目</dt>
+<dt>●设置项目</dt>
 <dd><dl>
 <dt>接受数值的变量</dt>
 <dd><p>指定玩家输入的数值要代入哪个变量。</p></dd>
@@ -152,7 +152,7 @@
 <dl>
 <dt>●功能</dt>
 <dd><p>显示“贵重物品”分类的物品选择画面。将玩家选择的道具ID代入变量。</p></dd>
-<dt>●设定项目</dt>
+<dt>●设置项目</dt>
 </dl>
 
 <dl><dd><dl>
@@ -166,7 +166,7 @@
 <dl>
 <dt>●功能</dt>
 <dd><p>从下往上卷动显示文字。按住确定键可以加速卷动。</p></dd>
-<dt>●设定项目</dt>
+<dt>●设置项目</dt>
 </dl>
 
 <dl><dd><dl>
