--- a/RPGVXAcecn/rpgvxace/5120_ev_ref_progress.html
+++ b/RPGVXAcecn/rpgvxace/5120_ev_ref_progress.html
@@ -13,7 +13,7 @@
 <dl>
 <dt>●功能</dt>
 <dd><p>打开或关闭开关。</p></dd>
-<dt>设定项目</dt>
+<dt>设置项目</dt>
 <dd>
 <dl>
 <dt>开关</dt>
@@ -29,7 +29,7 @@
 <dl>
 <dt>●功能</dt>
 <dd><p>更改变量中的值。</p></dd>
-<dt>●设定项目</dt>
+<dt>●设置项目</dt>
 <dd><dl>
 <dt>变量</dt>
 <dd><p>指定需要更改的变量。</p></dd>
@@ -143,7 +143,7 @@
 <dl>
 <dt>●功能</dt>
 <dd><p>操作独立开关的值。战斗事件中不可使用。</p></dd>
-<dt>●设定项目</dt>
+<dt>●设置项目</dt>
 <dd><dl>
 <dt>独立开关</dt>
 <dd><p>指定要操作的独立开关（A~D）</p></dd>
@@ -161,7 +161,7 @@
 <dt>●功能</dt>
 <dd>
   <p>启动/停止计时器。计时器可以计量时间限制（剩余时间）。启动计时器后，画面右上角就会自动显示剩余时间。打开菜单时，计时器的倒计时会暂停（不计量时间）。要根据计时器的剩余时间进行处理的分支，可以使用事件指令[分支条件]等。</p></dd>
-<dt>●设定项目</dt>
+<dt>●设置项目</dt>
 </dl>
 
 <dl><dd><dl>
