--- a/RPGVXAcecn/rpgvxace/5240_ev_ref_wait.html
+++ b/RPGVXAcecn/rpgvxace/5240_ev_ref_wait.html
@@ -18,7 +18,7 @@
   <p>暂时停止事件的处理。暂停过程中玩家无法操作（并行事件中的暂停除外）。</p>
 </dd>
 
-<dt>●设定项目</dt>
+<dt>●设置项目</dt>
 
 <dd><dl><dt>时间</dt>
 <dd><p>输入需要等待的时间长短，单位为帧（1~999帧），一帧等于 1/60 秒。</p></dd></dl></dd>
