--- a/RPGVXAcecn/rpgvxace/6100_resource.html
+++ b/RPGVXAcecn/rpgvxace/6100_resource.html
@@ -19,7 +19,7 @@
 </ul>
 
 <p>对于图片和音频等所有素材，VX Ace 允许您直接使用原本的素材文件。</p>
-<p>选择主菜单的「工具」→「素材管理」，可以打开一个供导出和导入各种素材的对话框。直接将素材复制进游戏文件夹可也以，但是素材管理窗口有一些特殊的功能（比如透明色设定），在对软件不熟悉的时候可以使用。</p>
+<p>选择主菜单的「工具」→「素材管理」，可以打开一个供导出和导入各种素材的对话框。直接将素材复制进游戏文件夹可也以，但是素材管理窗口有一些特殊的功能（比如透明色设置），在对软件不熟悉的时候可以使用。</p>
 
 <h2><a name="graphics">图片素材</a></h2>
 <p>PNG 或 JPG 格式的图片文件均可以使用。 PNG格式完全支持真彩色32位（以及Alpha通道）。</p>
@@ -128,7 +128,7 @@
 
 <h2><a name="tileset">图块素材详细</a></h2>
 <p>地图元件尺寸为 32&times;32，分成五组，从A ～ E，遵守下面的规则。</p>
-<p>此外，根据数据库中 [图块] → [模式] 的设定，图块的行为可能会发生变化。有关 [兼容VX的类型] 中图块的行为，请参考 「RPG Maker VX」的素材规格。</p>
+<p>此外，根据数据库中 [图块] → [模式] 的设置，图块的行为可能会发生变化。有关 [兼容VX的类型] 中图块的行为，请参考 「RPG Maker VX」的素材规格。</p>
 
 <dl>
 <dt>A 组元件</dt>
@@ -276,7 +276,7 @@
 </dd>
 <dt>F</dt>
 <dd>
-<p>在事件指令「显示文本」中，设定颜色控制符所使用的文字颜色。横向八个、纵向四个颜色色块，每个颜色色块为 8&times;8 像素。</p>
+<p>在事件指令「显示文本」中，设置颜色控制符所使用的文字颜色。横向八个、纵向四个颜色色块，每个颜色色块为 8&times;8 像素。</p>
 </dd>
 </dl>
 
