--- a/RPGVXAcecn/rgss/s_variables.html
+++ b/RPGVXAcecn/rgss/s_variables.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML lang=zh><HEAD><TITLE>Built-in Variables</TITLE>
 <META content="text/html; charset=GBK" http-equiv=Content-Type>
-<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet 
+<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17744"></HEAD>
 <BODY>
@@ -10,28 +10,28 @@ type=text/css href="../style.css">
 <P>下面是以作用范围不同区分的一些内建变量例子：</P>
 <H2>区域范围</H2>
 <DL>
-  <DT><A name=L000428>$~</A> 
+  <DT><A name=L000428>$~</A>
   <DD>
-  <P>在当前的作用域之内，上一次所匹配成功的信息（<A href="sc_matchdata.html">MatchData</A>）。设定此变量会改变 $&amp;、$1 ... $9 等变量的值。</P>
-  <P>相当于&nbsp;<A href="sc_regexp.html#L001314">Regexp.last_match</A>&nbsp;。</P>
-  <DT><A name=L000427>$&amp;</A> 
+  <P>在当前的作用域之内，上一次所匹配成功的信息（<A href="sc_matchdata.html">MatchData</A>）。设置此变量会改变 $&amp;、$1 ... $9 等变量的值。</P>
+  <P>相当于 <A href="sc_regexp.html#L001314">Regexp.last_match</A> 。</P>
+  <DT><A name=L000427>$&amp;</A>
   <DD>
   <P>在当前的作用域之内，上一次所匹配成功的字符串，若匹配失败，此变量之值则为 nil 。</P>
-  <P>相当于&nbsp;<A href="sc_regexp.html#L001314">Regexp.last_match</A>[0]</P>
-  <DT><A name=L000432>$1</A> 
-  <DT><A name=L000433>$2</A> 
-  <DT>$3 ... 
+  <P>相当于 <A href="sc_regexp.html#L001314">Regexp.last_match</A>[0]</P>
+  <DT><A name=L000432>$1</A>
+  <DT><A name=L000433>$2</A>
+  <DT>$3 ...
   <DD>
   <P>分别对应与索引号相同的的上次匹配成功的括号匹配值，若匹配失败则为 nil 。</P>
-  <P>相当于&nbsp;<A href="sc_regexp.html#L001314">Regexp.last_match</A>[1], <A 
+  <P>相当于 <A href="sc_regexp.html#L001314">Regexp.last_match</A>[1], <A
   href="sc_regexp.html#L001314">Regexp.last_match</A>[2], ...</P></DD></DL>
 <H2>全局范围</H2>
 <DL>
-  <DT><A name=L000437>$!</A> 
+  <DT><A name=L000437>$!</A>
   <DD>
-  <P>最近抛出的异常的信息。由 <A href="s_functions.html#L000388">raise</A>&nbsp;进行设定。</P>
-  <DT><A name=L000462>$DEBUG</A> 
+  <P>最近抛出的异常的信息。由 <A href="s_functions.html#L000388">raise</A> 进行设置。</P>
+  <DT><A name=L000462>$DEBUG</A>
   <DD>
-  <P>除错模式标记，RGSS在游戏测试时设定此标记。</P>
+  <P>除错模式标记，RGSS在游戏测试时设置此标记。</P>
   <P>在除错模式，异常处理的运行方式与一般运行时有所不同，但是对于 RGSS 不需要知道这些。</P></DD></DL>
 <H6></H6></BODY></HTML>
