--- a/RPGVXAcecn/rpgvxace/2120_map_design.html
+++ b/RPGVXAcecn/rpgvxace/2120_map_design.html
@@ -69,7 +69,7 @@
 
 <dt><a name="notice">● 底层图块的特殊规格</a></dt>
 <dd><p>底层图块中的A2图块（图块选择面版中的第3到8行）被分成了基本图块（前四列）与装饰图块（后四列）。装饰图块能够在基本图块上绘制而不覆盖基本图块。</p>
-<p>但是，如果图块组在[图块]中设定[模式]为[世界地图类型]，那么将基本图块中的第二列和第四列上的图块覆盖上装饰图块时，基本图块会变化为第一列或者第三列的对应图块。</p></dd>
+<p>但是，如果图块组在[图块]中设置[模式]为[世界地图类型]，那么将基本图块中的第二列和第四列上的图块覆盖上装饰图块时，基本图块会变化为第一列或者第三列的对应图块。</p></dd>
 
 </dl>
 
