--- a/RPGVXAcecn/rpgvxace/3210_db_actor.html
+++ b/RPGVXAcecn/rpgvxace/3210_db_actor.html
@@ -2,20 +2,20 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>角色设定</title>
+<title>角色设置</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
 
-<h1><a name="key_actor">角色设定</a></h1>
+<h1><a name="key_actor">角色设置</a></h1>
 
 <h2>数据的用途</h2>
 
 <p>角色数据用于表示玩家操作的人物。角色可以拥有自己的特性。</p>
 
-<h2>设定项目的内容</h2>
+<h2>设置项目的内容</h2>
 
 <div align="center"><img src="img/3210_01.png" alt="角色"></div>
 <dl>
@@ -35,14 +35,14 @@
 <dd><p>角色的介绍。游戏中会显示在角色状态画面的下端。</p></dd>
 
 <dt>●图像</dt>
-<dd><p>角色的图像。左边的方框可以设定角色在地图上移动时显示的行走图，右边的方框可以设定显示于状态画面等位置的脸图。两边都可以在方框内双击，在弹出的图像一览界面中指定要使用的图像。不想显示图像的话指定「（无）」。</p></dd>
+<dd><p>角色的图像。左边的方框可以设置角色在地图上移动时显示的行走图，右边的方框可以设置显示于状态画面等位置的脸图。两边都可以在方框内双击，在弹出的图像一览界面中指定要使用的图像。不想显示图像的话指定「（无）」。</p></dd>
 
 <dt>●初始装备</dt>
 <dd><p>游戏开始时角色的装备。[武器] [盾牌] [头盔] [铠甲] [饰品] 每个部位都可以从下拉列表中选择一项。可选的仅限该角色的职业可以装备的物品。指定「（无）」的话，该部位在游戏开始时没有装备。</p></dd>
 
 <dt>●特性</dt>
 <dd>
-  <p>角色特有的属性。在设定栏的各行上双击，将内容定义在弹出的窗口中。详情请见<a href="3410_db_feature.html">“特性的设定方法”</a>。</p>
+  <p>角色特有的属性。在设置栏的各行上双击，将内容定义在弹出的窗口中。详情请见<a href="3410_db_feature.html">“特性的设置方法”</a>。</p>
 </dd>
 </dl>
 
