--- a/RPGVXAcecn/rpgvxace/3220_db_job.html
+++ b/RPGVXAcecn/rpgvxace/3220_db_job.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>职业设定</title>
+<title>职业设置</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1><a name="key_job">职业设定</a></h1>
+<h1><a name="key_job">职业设置</a></h1>
 
 <h2>数据的用途</h2>
 
 <p>职业数据整合了有关角色能力的特性。角色必须属于某一个职业，以职业为基准来决定等级上升的方式、能力值提升的方式、可以习得的节能等等。职业也可以有自己的特性。</p>
 
-<h2>设定项目的内容</h2>
+<h2>设置项目的内容</h2>
 
 <div align="center"><img src="img/3220_01.png" alt="职业"></div>
 <dl>
@@ -24,8 +24,8 @@
 <dt>●经验值曲线</dt>
 <dd>
 <img src="img/3220_02.png" alt="经验值曲线" class="float_r">
-<p>设定一个经验值作为等级上升的标准。角色每获得一次升级所需经验值，角色的等级都会上升一级，获得能力值的提升并习得新的技能。</p>
-<p>所需经验值，可以点击设定栏的[…]打开设定窗口，设定下列的四个基准值。窗口上的[下一等级]标签中可以一览每级需要的经验值。背景上画出了经验值的曲线。建议参考这些数据进行设定。[总计]标签表示要达到各个等级累计需要的经验值。</p><br>
+<p>设置一个经验值作为等级上升的标准。角色每获得一次升级所需经验值，角色的等级都会上升一级，获得能力值的提升并习得新的技能。</p>
+<p>所需经验值，可以点击设置栏的[…]打开设置窗口，设置下列的四个基准值。窗口上的[下一等级]标签中可以一览每级需要的经验值。背景上画出了经验值的曲线。建议参考这些数据进行设置。[总计]标签表示要达到各个等级累计需要的经验值。</p><br>
 </dd>
 </dl>
 
@@ -45,7 +45,7 @@
 
 <dl>
 <dt>能力值成长曲线</dt>
-<dd><p>设定每一等级的能力值。双击曲线图像即可打开设定窗口。请参考<a href="#status_setting">“能力值成长曲线的设定方法”</a>。</p>
+<dd><p>设置每一等级的能力值。双击曲线图像即可打开设置窗口。请参考<a href="#status_setting">“能力值成长曲线的设置方法”</a>。</p>
 </dd>
 
 <dt>●技能</dt>
@@ -53,17 +53,17 @@
 
 <dt>●特性</dt>
 <dd>
-  <p>赋予该职业的角色的特性。详情请见<a href="3410_db_feature.html">“特性的设定方法”</a>。</p>
+  <p>赋予该职业的角色的特性。详情请见<a href="3410_db_feature.html">“特性的设置方法”</a>。</p>
 </dd>
 </dl>
 
-<h2><a name="status_setting">能力值成长曲线的设定方法</a></h2>
+<h2><a name="status_setting">能力值成长曲线的设置方法</a></h2>
 <img src="img/3220_03.png" alt="能力值成长曲线" class="float_r">
-<p>[能力值成长曲线]窗口可以将各等级的能力值用如下的方式设定。点击能力值名称的标签可以切换编辑对象。编辑完点击[确定]后，设定的能力值就能够反映出来（点击[取消]的话内容将会丢弃）。</p><br>
+<p>[能力值成长曲线]窗口可以将各等级的能力值用如下的方式设置。点击能力值名称的标签可以切换编辑对象。编辑完点击[确定]后，设置的能力值就能够反映出来（点击[取消]的话内容将会丢弃）。</p><br>
 
 <dl>
 <dt>●简易设置</dt>
-<dd><p>将预先设定好的值应用到所有等级上。值的设定模式有 [A] ~ [E] 五种，点击对应的按钮即可应用。</p></dd>
+<dd><p>将预先设置好的值应用到所有等级上。值的设置模式有 [A] ~ [E] 五种，点击对应的按钮即可应用。</p></dd>
 
 <dt>●等级/数值</dt>
 <dd><p>直接编辑每个等级的能力值。先用[等级]指定等级数（1~99），再用[数值]指定该等级的能力值。</p></dd>
@@ -71,7 +71,7 @@
 <dt>●生成曲线</dt>
 <dd><p>根据等级1和等级99的能力值，自动计算出中间等级的能力值。</p>
 <p>点击按钮会打开[生成曲线]窗口，在[1级]、[99级]上指定对应等级的能力值（体力上限/魔力上限为1~9999，其他能力值为1~999）。</p>
-<p>下方的滑条决定了成长类型。左侧（早熟）会使角色的成长率（能力值上升的多少）随着等级的上升而逐渐放缓，右侧（晚熟）会使成长率逐渐升高。点击[确定]后，能力值就会基于指定的内容设定完成了。</p></dd>
+<p>下方的滑条决定了成长类型。左侧（早熟）会使角色的成长率（能力值上升的多少）随着等级的上升而逐渐放缓，右侧（晚熟）会使成长率逐渐升高。点击[确定]后，能力值就会基于指定的内容设置完成了。</p></dd>
 
 <dt>●图像</dt>
 <dd><p>以直线图表示各等级的能力值。点击/拖拽图像范围内部，对应位置的等级的能力值就会发生变化。</p></dd>
