--- a/RPGVXAcecn/rpgvxace/3240_db_item.html
+++ b/RPGVXAcecn/rpgvxace/3240_db_item.html
@@ -2,18 +2,18 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>物品设定</title>
+<title>物品设置</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1><a name="key_item">物品设定</a></h1>
+<h1><a name="key_item">物品设置</a></h1>
 
 <h2>数据的用途</h2>
 <p>该数据用来表示装备以外的物品。角色使用道具时可以将道具的效果赋予人物。此外，还可以制作开门的钥匙这类的道具，作为改变故事（事件内容）的基准。</p>
 
-<h2>设定项目的内容</h2>
+<h2>设置项目的内容</h2>
 
 <div align="center"><img src="img/3240_01.png" alt="物品"></div>
 <dl>
@@ -33,7 +33,7 @@
 <dd><p>在商店购买该道具的价格。出售时的价格一律为半价。设为0时道具不可出售。</p></dd>
 
 <dt>●消耗品</dt>
-<dd><p>使用时会不会使道具丢失。设定为[是]的话，每次使用时持有道具数会减1。</p></dd>
+<dd><p>使用时会不会使道具丢失。设置为[是]的话，每次使用时持有道具数会减1。</p></dd>
 
 <dt>●效果范围</dt>
 <dd><p>使用技能时受到技能效果影响的对象。从以下项目中指定一项。</p></dd>
@@ -164,7 +164,7 @@
 
 <dt>●使用效果</dt>
 <dd>
-  <p>除了伤害之外的效果内容。双击此处可以打开[使用效果]窗口进行设定。详情请见<a href="3420_db_effect.html">“使用效果的设定方法”</a>。</p>
+  <p>除了伤害之外的效果内容。双击此处可以打开[使用效果]窗口进行设置。详情请见<a href="3420_db_effect.html">“使用效果的设置方法”</a>。</p>
 </dd>
 </dl>
 </dl>
