--- a/RPGVXAcecn/rpgvxace/3270_db_enemy.html
+++ b/RPGVXAcecn/rpgvxace/3270_db_enemy.html
@@ -2,18 +2,18 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>敌人设定</title>
+<title>敌人设置</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<h1><a name="key_enemy">敌人的设定</a></h1>
+<h1><a name="key_enemy">敌人的设置</a></h1>
 
 <h2>数据的用途</h2>
 
-<p>该数据用来表示和玩家战斗的敌方角色。敌人除了可以和角色一样设定能力值之外，还可以设定战斗中的行为模式。</p>
+<p>该数据用来表示和玩家战斗的敌方角色。敌人除了可以和角色一样设置能力值之外，还可以设置战斗中的行为模式。</p>
 
-<h2>设定项目的内容</h2>
+<h2>设置项目的内容</h2>
 
 <div align="center"><img src="img/3270_01.png" alt="敌人"></div>
 <dl>
@@ -37,7 +37,7 @@
 <dt><a name="key_enemy_action">●行为模式</a></dt>
 <dd>
 <img src="img/3270_02.png" alt="行为模式" class="float_r">
-  <p>设置战斗中敌人的行为方式。初始值已经自动设定好了普通攻击。双击此处可以打开[战斗行为]窗口，在[技能]中指定行为内容，[优先级]中指定该项目的优先级，[行为条件]按照以下的基准进行指定。战斗中的行为会依据后面的<a href="#action_rule">“行为模式应用规则”</a>来决定。</p>
+  <p>设置战斗中敌人的行为方式。初始值已经自动设置好了普通攻击。双击此处可以打开[战斗行为]窗口，在[技能]中指定行为内容，[优先级]中指定该项目的优先级，[行为条件]按照以下的基准进行指定。战斗中的行为会依据后面的<a href="#action_rule">“行为模式应用规则”</a>来决定。</p>
 </dd>
 <dd>
 <dl>
@@ -65,16 +65,16 @@
 <dl>
 <dt>●特性</dt>
 <dd>
-  <p>敌人的特性。双击设定栏会打开一个窗口，在打开的窗口中定义内容。详情请见<a href="3410_db_feature.html">“特性的设定方法”</a>。</p>
+  <p>敌人的特性。双击设置栏会打开一个窗口，在打开的窗口中定义内容。详情请见<a href="3410_db_feature.html">“特性的设置方法”</a>。</p>
 </dd>
 </dl>
 
 <h2><a name="action_rule">行为模式应用规则</a></h2>
 
-<p>在[行为模式]中设定的行为中，战斗中应用哪一个行为是由以下规则决定的。</p>
+<p>在[行为模式]中设置的行为中，战斗中应用哪一个行为是由以下规则决定的。</p>
 
 <dl>
-<dd><p>（1）从设定的所有行为中挑选出满足条件的行为。没有行为满足条件时敌人不会发生任何行为。</p>
+<dd><p>（1）从设置的所有行为中挑选出满足条件的行为。没有行为满足条件时敌人不会发生任何行为。</p>
 <p>（2）从满足条件的行为中，将优先级最高的，以及优先级和最高优先级的差在2以内的行为作为候补。</p>
 <p>（3）在候补中，和最大优先级的差值为1和2的行为，各自的应用概率为最大优先级行为的2/3，1/3。有多个行为优先级相同时，这些行为的应用概率也相同。</p></dd>
 </dl>
