--- a/RPGVXAcecn/rpgvxace/3290_db_state.html
+++ b/RPGVXAcecn/rpgvxace/3290_db_state.html
@@ -2,21 +2,21 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>状态设定</title>
+<title>状态设置</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1><a name="key_state">状态设定</a></h1>
+<h1><a name="key_state">状态设置</a></h1>
 
 <h2>数据的用途</h2>
 
-<p>状态是指“毒”和“混乱”等对角色的能力和行动产生影响的异常状态。数据中可以设定附加该状态时具体的影响。不仅仅是“中毒损血”的负面影响，也可以设定“兴奋加攻”的正面效果。</p>
+<p>状态是指“毒”和“混乱”等对角色的能力和行动产生影响的异常状态。数据中可以设置附加该状态时具体的影响。不仅仅是“中毒损血”的负面影响，也可以设置“兴奋加攻”的正面效果。</p>
 
 <p>另外，001号的「无法战斗」状态，是角色和敌人在HP归零时自动附加的特殊状态。队伍中的全体成员都附加这个状态时游戏结束。</p>
 
-<h2>设定项目的内容</h2>
+<h2>设置项目的内容</h2>
 
 <div align="center"><img src="img/3290_01.png" alt="状态"></div>
 <dl>
@@ -45,7 +45,7 @@
 <dt>●显示优先级</dt>
 <dd><p>状态图标显示的优先级（0~100）。人物附加多个状态时，会显示优先级最高的状态图标。优先级相同时，会显示ID最小的状态。</p></dd>
 <dt>●解除条件</dt>
-<dd><p>状态解除的条件。根据以下项目指定条件。设定了多个条件时，多个条件会分别判定，只要满足一个条件就会解除状态。</p></dd>
+<dd><p>状态解除的条件。根据以下项目指定条件。设置了多个条件时，多个条件会分别判定，只要满足一个条件就会解除状态。</p></dd>
 </dl>
 
 <dl><dd><dl>
@@ -66,7 +66,7 @@
 <dd><p>战斗中该状态附加/解除时显示的信息。分别指定[该状态附加到队友时][该状态附加到敌人时][该状态持续时][该状态解除时]这四种状况下，跟在对象名字后面显示的语句。</p></dd>
 <dt>●特性</dt>
 <dd>
-  <p>赋予附加有该状态的对象的特性。详情请见<a href="3410_db_feature.html">“特性的设定方法”</a>。</p>
+  <p>赋予附加有该状态的对象的特性。详情请见<a href="3410_db_feature.html">“特性的设置方法”</a>。</p>
 </dd>
 </dl>
 
